lang: Update with CrowdIn (80%+ completes)

--- a/lang/de-DE.json
+++ b/lang/de-DE.json
@@ -4,10 +4,10 @@
     "configHeader": "Konfiguration",
     "configDesc": "(Einige Änderungen erfordern einen Neustart)",
     "preferencesHeader": "Einstellungen",
-    "extremeGames": "Extreme Spiele",
-    "extremeGamesDesc": "Zeige Spiele mit sexuellen, gewaltsamen oder anderen, nicht jugendfreien Inhalten.",
+    "extremeGames": "Extreme Inhalte",
+    "extremeGamesDesc": "Erlaube Tags der \"Extrem\" Tag-Filtergruppen und entsprechende Spiele anzuzeigen.",
     "enableEditing": "Bearbeiten Erlauben",
-    "enableEditingDesc": "Erlaube das Bearbeiten von Spielen, weiteren Anwendungen und Playlists. Zeigt auch die \"Kuratieren\" Karte.",
+    "enableEditingDesc": "Aktiviere Bearbeitung von Spielen und zusätzlichen Anwendungen. Zeigt auch Tabs im Zusammenhang mit der Bearbeitung.",
     "onDemandImages": "Bilder auf Nachfrage",
     "onDemandImagesDesc": "Fehlende Logos und Screenshots herunterladen und speichern, wenn sie benötigt werden.",
     "currentLanguage": "Sprache",
@@ -20,15 +20,29 @@
     "flashpointPath": "Dateipfad Flashpoint",
     "flashpointPathDesc": "Der Dateipfad zum Flashpoint-Ordner (kann relativ angegeben werden)",
     "browse": "Durchsuchen",
+    "libraries": "Bibliotheken",
+    "randomLibraries": "Zufällige Bibliotheken",
+    "randomLibrariesDesc": "Bibliotheken für die zufällige Auswahl auf der Startseite.",
+    "updateSource": "Quelle aktualisieren",
     "platforms": "Plattformen",
     "nativePlatforms": "Native Plattformen",
     "nativePlatformsDesc": "Native Versionen dieser Plattformen verwenden. (Wenn nicht verfügbar wird Wine verwendet)",
+    "tagFilterGroups": "Tag-Filtergruppen",
+    "tagFilterGroupsDesc": "Diese Gruppen werden Vorschläge und Spiele aus den Suchergebnissen filtern",
+    "editTagFilter": "Tag-Filtergruppe bearbeiten",
+    "duplicateTagFilter": "Tag-Filtergruppe duplizieren",
+    "deleteTagFilter": "Tag-Filtergruppe löschen",
+    "appPathOverrides": "Anwendungspfad Überschreiben",
+    "appPathOverridesDesc": "Überschreibt den Anwendungspfad auf der linken Seite mit dem auf der rechten Seite beim Start von Spielen.",
     "visualsHeader": "Aussehen",
     "useCustomTitleBar": "Eigene Titelleiste verwenden",
     "useCustomTitleBarDesc": "Die eigene Titelleiste am oberen Rand des Fensters verwenden.",
     "theme": "Thema",
     "noTheme": "Kein Thema",
-    "themeDesc": "Dateipfad des zu benutzenden Themas (relativ zum \"themes\"-Ordner).",
+    "themeDesc": "ID des zu verwendenden Themas.",
+    "logoSet": "Logo-Set",
+    "noLogoSet": "Kein Logo-Set",
+    "logoSetDesc": "ID des zu verwendenden Logo-Sets.",
     "advancedHeader": "Erweitert",
     "showDeveloperTab": "Entwicklerkarte zeigen",
     "showDeveloperTabDesc": "Zeige die Karte \"Entwickler\". Diese ist wahrscheinlich nur für Entwickler und Kuratoren nützlich.",
@@ -36,7 +50,15 @@
     "serverDesc": "Welcher Serverprozess beim Start des Launchers ausgeführt werden soll.",
     "metadataServerHost": "Metadaten-Server Host",
     "metadataServerHostDesc": "Host eines Metadaten-Servers. Wird zum Synchronisieren neuer und aktualisierter Spielinformationen mit dem Launcher verwendet.",
-    "saveAndRestart": "Speichern und neu starten"
+    "extensionsHeader": "Erweiterungen",
+    "noExtensionsLoaded": "Keine Erweiterungen geladen, installiere sie nach '{0}'",
+    "extDevScripts": "Entwickler-Skript(e)",
+    "extThemes": "Themen",
+    "extLogoSets": "Logo-Set(s)",
+    "extApplications": "Anwendung(en)",
+    "saveAndRestart": "Speichern und neu starten",
+    "saveAndClose": "Speichern und schließen",
+    "tagFilterGroupEditor": "Tag-Filtergruppen-Editor"
   },
   "home": {
     "updateHeader": "Launcher Update",
@@ -76,6 +98,7 @@
   },
   "logs": {
     "filters": "Filter",
+    "logLevels": "Art des Logs",
     "copyText": "Text kopieren",
     "clearLog": "Protokoll löschen",
     "copy404Urls": "404-URLs kopieren",
@@ -141,8 +164,22 @@
     "importLegacyPlatformsDesc": "Importiert Legacy-Plattformen von \"Data/Plattforms/\" - WARNUNG: Überschreibt kollidierende Spiele",
     "importLegacyPlaylists": "Legacy-Playlists importieren",
     "importLegacyPlaylistsDesc": "Importiert Legacy-Playlists aus \"/Data/Playlists\"",
+    "deleteAllPlaylists": "Alle Playlists löschen",
+    "deleteAllPlaylistsDesc": "Achtung! Löscht alle Playlisten.",
     "importMetaEdits": "Meta-Edits importieren",
     "importMetaEditsDesc": "Importiert ALLE Meta-Edits aus \"/Data/MetaEdits\"",
+    "fixPrimaryAliases": "Primäre Aliase reparieren",
+    "fixPrimaryAliasesDesc": "Füge einen primären Alias zu allen Tags hinzu, die einer fehlt",
+    "fixCommaTags": "Tags mit Kommas beheben",
+    "fixCommaTagsDesc": "Teilt Tags mit Kommas in viele Tags und wendet sie auf alle anwendbaren Spiele an",
+    "exportTags": "Tags exportieren",
+    "exportTagsDesc": "Erstellt eine Datei voller Tags und Tag-Kategorien, die von 'Tags importieren' verwendet werden kann",
+    "importTags": "Tags importieren",
+    "importTagsDesc": "Importiert Tags aus einer Datei, die von 'Tags exportieren' erstellt wurde",
+    "migrateExtremeGames": "Extreme Spiele migrieren",
+    "migrateExtremeGamesDesc": "Entfernt 'Extrem' von allen Spielen und weist ihnen das 'LEGACY-Extrem' Tag zu",
+    "massImportGameData": "Massenimport Spieldaten",
+    "massImportGameDataDesc": "Massenimportiert Spieldaten-Pakete und versucht, ihre Dateinamen mit der UUID eines Spiels abzustimmen.",
     "servicesHeader": "Hintergrunddienste",
     "servicesMissing": "Es gibt keine Dienste.",
     "running": "Wird ausgeführt",
@@ -173,6 +210,8 @@
   "browse": {
     "noTitle": "Kein Titel",
     "by": "von",
+    "play": "Abspielen",
+    "stop": "Anhalten",
     "noDeveloper": "Kein Entwickler",
     "alternateTitles": "Alternative Titel",
     "noAlternateTitles": "Keine alternativen Titel",
@@ -219,6 +258,11 @@
     "searching": "Suche...",
     "library": "Verzeichnis",
     "defaultLibrary": "Standardverzeichnis",
+    "uninstallGame": "Spiel deinstallieren",
+    "installed": "Installiert",
+    "notInstalled": "Nicht installiert",
+    "legacyGame": "Legacy-Spiel",
+    "download": "Herunterladen",
     "thumbnail": "Thumbnail",
     "screenshot": "Screenshot",
     "dropImageHere": "Bild zum Einfügen hierher ziehen",
@@ -247,6 +291,7 @@
     "noGameMatchedSearch": "Versuche, nach etwas weniger Restriktivem zu suchen."
   },
   "tags": {
+    "name": "Name",
     "noName": "Kein Name",
     "description": "Beschreibung",
     "noDescription": "Keine Beschreibung",
@@ -274,6 +319,9 @@
     "deleteAll": "Alle löschen",
     "deleteAllDesc": "Alle aktuell geladenen Kurationen löschen",
     "saveImportedCurations": "Importierte Kurationen speichern",
+    "keepArchiveKey": "Kurationsarchiv-UUID behalten",
+    "symlinkCurationContent": "Symlink Curation-Inhaltsordner (Admin-Abfragen bei Windows, erforderlich für MAD4FP)",
+    "useTagFilters": "Tag-Filter in Vorschlägen verwenden",
     "openCurationsFolder": "Kurationen-Ordner",
     "openCurationsFolderDesc": "Öffne den Kurationen-Ordner im Explorer",
     "openExportsFolder": "Exportierte Kurationen",
@@ -288,6 +336,8 @@
     "loadArchiveDesc": "Lade ein oder mehrere Kurations-Archive",
     "loadFolder": "Ordner laden",
     "loadFolderDesc": "Lade einen oder mehrere Kurationsordner",
+    "scanNewCurationFolders": "Nach neuen Kurationen suchen",
+    "scanNewCurationFoldersDesc": "Sucht nach Kurationen, die nach dem ersten Scan hinzugefügt wurden",
     "noCurations": "Keine Kurationen",
     "id": "Kurationen-Ordner",
     "heading": "Überschrift",
@@ -320,8 +370,14 @@
     "unusedPlatform": "\"Plattform\" hat einen ungenutzten Wert. Stelle sicher, dass er korrekt geschrieben ist!",
     "nonExistingLibrary": "\"Verzeichnis\" ist nicht der Name eines existierenden Verzeichnisses! (Standard wird verwendet)",
     "nonContentFolders": "Inhaltsfreie Ordner im Kurationsordner gefunden. Sollen sie dort sein?",
+    "noTags": "Es gibt keine Tags für diese Kuration.",
+    "noSource": "'Quelle' ist ein Pflichtfeld.",
+    "unenteredTag": "Das Tag-Textfeld wurde nicht eingegeben.",
+    "noLogo": "Es gibt kein Logo für diese Kuration.",
+    "noScreenshot": "Es gibt keinen Screenshot für diese Kuration.",
     "ilc_notHttp": "HTTP verwenden.",
-    "ilc_nonExistant": "Zeigen auf eine existierende Datei im Ordner 'Inhalte' deiner Kuration."
+    "ilc_nonExistant": "Zeigen auf eine existierende Datei im Ordner 'Inhalte' deiner Kuration.",
+    "sort": "Kurationen sortieren (A-Z)"
   },
   "playlist": {
     "enterDescriptionHere": "Beschreibung hier eingeben...",
@@ -363,8 +419,10 @@
     "viewThumbnailInFolder": "Miniaturansicht im Ordner anzeigen",
     "viewScreenshotInFolder": "Screenshot im Ordner anzeigen",
     "openFileLocation": "Am Speicherort öffnen",
+    "addToPlaylist": "Zur Playlist hinzufügen",
     "duplicateMetaOnly": "Duplizieren (nur Meta)",
     "duplicateMetaAndImages": "Duplizieren (Meta && Bilder)",
+    "copyGameUUID": "UUID des Spiels kopieren",
     "exportMetaOnly": "Exportieren (nur Meta)",
     "exportMetaAndImages": "Exportieren (Meta && Bilder)",
     "exportMetaEdit": "Meta-Edit exportieren",
@@ -380,8 +438,8 @@
     "flashpointPathInvalid": "Flashpoint-Pfad ungültig!",
     "pathNotFound": "Pfad nicht gefunden!",
     "playlistConflict": "Playlist-Konflikt",
-    "importedPlaylistAlreadyExists": "Importierte Playlist existiert bereits! - '{0}'",
-    "mergeOrStaySeperate": "Sollen sie zu einer zusammengeführt werden oder als getrennte Playlists bleiben?",
+    "importedPlaylistAlreadyExists": "Importierte Playlist existiert bereits mit demselben Namen! - '{0}'",
+    "importPlaylistAs": "Playlist importieren als",
     "selectFileToExportMeta": "Datei zum Speichern von Meta auswählen",
     "selectFolderToExportMetaAndImages": "Wähle einen Ordner, um Meta und Bilder zu speichern",
     "replaceFilesQuestion": "Dateien überschreiben?",
@@ -401,19 +459,44 @@
     "restartNow": "Jetzt neu starten?",
     "restartToApplyUpgrade": "Dieses Upgrade wird bis zum Neustart nicht angewendet.\nMöchtest du dies jetzt tun?",
     "areYouSure": "Bist du sicher?",
+    "areYouSureDelete": "Ausgewählten Eintrag wirklich löschen?",
+    "areYouSurePlaylistRemove": "Ausgewählten Eintrag wirklich aus der Playlist entfernen?",
     "cancel": "Abbrechen",
     "mergePlaylists": "Playlists zusammenführen",
     "newPlaylist": "Separat bleiben",
-    "uploadPrivacyWarning": "Dadurch werden deine Logs öffentlich zugänglich gemacht.\nEin Link wird in deine Zwischenablage kopiert.\n\nBist du sicher?",
+    "uploadPrivacyWarning": "Dies wird deine Logs öffentlich zugänglich machen.\nEin Link wird in deine Zwischenablage kopiert.\n\nBist du sicher?",
     "overwriteFileTitle": "Datei existiert bereits!",
     "overwriteFileMessage": "Eine Datei mit dem gleichen Namen existiert bereits. Möchtest du sie überschreiben?",
-    "overwriteFileDetail": "Dateipfad:"
+    "overwriteFileDetail": "Dateipfad:",
+    "deleteTagFilterGroup": "Diese Tag-Filtergruppe löschen?",
+    "deleteCuration": "Diese Kuration löschen?",
+    "importCuration": "Diese Kuration importieren?",
+    "deleteGameImage": "Dieses Bild löschen?",
+    "deletePlaylist": "Diese Playlist löschen?",
+    "importAllCurations": "Alle Kurationen importieren?",
+    "deleteAllCurations": "Alle Kurationen löschen?",
+    "removePlaylistGame": "Dieses Spiel von der Playlist entfernen?",
+    "deleteGame": "Dieses Spiel löschen? Dies kann nicht rückgängig gemacht werden.",
+    "deleteGameData": "Diese Spieldaten löschen? Dies kann nicht rückgängig gemacht werden.",
+    "deleteAddApp": "Diese App löschen?",
+    "deleteTagCategory": "Diese Tag-Kategorie löschen?",
+    "deleteTag": "Diesen Tag löschen?",
+    "deleteTagAlias": "Diesen Tag-Alias löschen?",
+    "deleteSource": "Diese Quelle löschen?",
+    "uninstallGame": "Dieses Spiel deinstallieren?",
+    "unableToUninstallGameData": "Datenpaket kann nicht gelöscht werden. Wird es verwendet? Versuche den Launcher neu zu starten.",
+    "unableToDeleteGame": "Spiel kann nicht gelöscht werden. Wird es verwendet? Versuche den Launcher neu zu starten.",
+    "downloadingGame": "Spiel wird heruntergeladen...",
+    "verifyingGame": "Spiel wird überprüft...",
+    "aFewMinutes": "Dies kann einige Minuten dauern."
   },
   "libraries": {
     "arcade": "Spiele",
     "arcadePlural": "Alle Spiele",
     "theatre": "Animationen",
-    "theatrePlural": "Alle Animationen"
+    "theatrePlural": "Alle Animationen",
+    "auditorium": "NG-Auditorium",
+    "auditoriumPlural": "Alle NG-Animationen"
   },
   "upgrades": {
     "infinity": "Flashpoint Infinity",
