--- a/lang/es-ES.json
+++ b/lang/es-ES.json
@@ -4,14 +4,14 @@
     "configHeader": "Configuración",
     "configDesc": "(Debes presionar 'Guardar y Reiniciar' para que algunos cambios surtan efecto)",
     "preferencesHeader": "Preferencias",
-    "extremeGames": "Juegos Extremos",
-    "extremeGamesDesc": "Mostrar juegos con contenido sexual, violento o no apto para menores de edad.",
+    "extremeGames": "Extreme Content",
+    "extremeGamesDesc": "Allow tags inside 'Extreme' tag filter groups and corresponding games to be shown.",
     "enableEditing": "Habilitar la edición",
-    "enableEditingDesc": "Habilitar la edición de juegos, aplicaciones adicionales y listas de reproducción. También muestra la pestaña 'Curar'.",
+    "enableEditingDesc": "Hablitar la edición de juegos y aplicaciones adicionales. También muestra pestañas relacionadas con la edición.",
     "onDemandImages": "Imágenes bajo demanda",
     "onDemandImagesDesc": "Descarga y guarda logotipos y capturas de pantalla cuando sea necesario.",
     "currentLanguage": "Idioma",
-    "currentLanguageDesc": "Qué idioma usará el launcher principalmente.",
+    "currentLanguageDesc": "Qué idioma usará la aplicación principalmente.",
     "fallbackLanguage": "Idioma de reserva",
     "fallbackLanguageDesc": "Qué idioma usar en caso de que el idioma actual este incompleto.",
     "auto": "Automático ({0})",
@@ -20,15 +20,29 @@
     "flashpointPath": "Ruta de Flashpoint",
     "flashpointPathDesc": "Ruta de la carpeta Flashpoint (puede ser relativa)",
     "browse": "Navegar",
+    "libraries": "Librerías",
+    "randomLibraries": "Librerías aleatorias",
+    "randomLibrariesDesc": "Librerías a usar para las selecciones aleatorias en la página de inicio.",
+    "updateSource": "Actualizar fuente",
     "platforms": "Plataformas",
     "nativePlatforms": "Plataformas nativas",
     "nativePlatformsDesc": "Usar versiones nativas de estas plataformas. (Si no está disponible, utilizará Wine)",
+    "tagFilterGroups": "Grupos de filtros de etiquetas",
+    "tagFilterGroupsDesc": "Estos grupos filtraran sugerencias y juegos afuera de los resultados de búsqueda",
+    "editTagFilter": "Editar grupo de filtros de etiquetas",
+    "duplicateTagFilter": "Duplicar grupo de filtros de etiquetas",
+    "deleteTagFilter": "Eliminar grupo de filtros de etiquetas",
+    "appPathOverrides": "Reemplazos de Rutas de Aplicación",
+    "appPathOverridesDesc": "Reemplaza la ruta de la aplicación de la izquierda con la de la derecha al iniciar juegos.",
     "visualsHeader": "Visuales",
     "useCustomTitleBar": "Usar barra de título personalizada",
     "useCustomTitleBarDesc": "Usar una barra de título personalizada en la parte superior de esta ventana.",
     "theme": "Tema",
     "noTheme": "Sin tema",
-    "themeDesc": "Ruta del archivo de tema a usar (relativa a la carpeta de temas).",
+    "themeDesc": "ID del tema a usar.",
+    "logoSet": "Conjunto de logotipos",
+    "noLogoSet": "Sin conjunto de logotipos",
+    "logoSetDesc": "ID del logotipo a usar.",
     "advancedHeader": "Avanzado",
     "showDeveloperTab": "Mostrar la pestaña Desarrollador",
     "showDeveloperTabDesc": "Mostrar la pestaña 'Desarrollador'. Esta es muy probable que sólo sea útil para desarrolladores y curadores.",
@@ -36,7 +50,15 @@
     "serverDesc": "Cual proceso de servidor se ejecutará al iniciar la aplicación.",
     "metadataServerHost": "Servidor de metadatos anfitrión",
     "metadataServerHostDesc": "Anfitrión del servidor de metadatos. Utilizado para sincronizar información nueva y actualizada de los juegos a la aplicación.",
-    "saveAndRestart": "Guardar y reiniciar"
+    "extensionsHeader": "Extensiones",
+    "noExtensionsLoaded": "No hay extensiones cargadas, Instalarlas a '{0}'",
+    "extDevScripts": "Lineas de código(s) del desarrollador",
+    "extThemes": "Tema(s)",
+    "extLogoSets": "Conjunto(s) de logotipos",
+    "extApplications": "Aplicación(es)",
+    "saveAndRestart": "Guardar y reiniciar",
+    "saveAndClose": "Guardar y cerrar",
+    "tagFilterGroupEditor": "Editor de grupo de filtros de etiquetas"
   },
   "home": {
     "updateHeader": "Actualización de la aplicación",
@@ -76,6 +98,7 @@
   },
   "logs": {
     "filters": "Filtros",
+    "logLevels": "Niveles de registro",
     "copyText": "Copiar texto",
     "clearLog": "Limpiar el registro",
     "copy404Urls": "Copiar las URLs 404",
@@ -141,8 +164,22 @@
     "importLegacyPlatformsDesc": "Importa plataformas existentes de 'Data/Platforms' - PRECAUCIÓN: Se sobreescribirá juegos en conflicto",
     "importLegacyPlaylists": "Importar listas de reproducción existentes",
     "importLegacyPlaylistsDesc": "Importa listas de reproducción existentes de '/Data/Playlists'",
+    "deleteAllPlaylists": "Borrar todas las listas de reproducción",
+    "deleteAllPlaylistsDesc": "¡CUIDADO! Elimina todas las listas de reproducción.",
     "importMetaEdits": "Importa correcciones de metadatos",
     "importMetaEditsDesc": "Importa TODAS las correcciones de metadatos de '/Data/MetaEdits'",
+    "fixPrimaryAliases": "Arregla aliases primarios",
+    "fixPrimaryAliasesDesc": "Añade un alias principal a cualquier etiqueta que no tenga uno",
+    "fixCommaTags": "Corregir etiquetas con comas",
+    "fixCommaTagsDesc": "Divide las etiquetas con comas en varias etiquetas y las aplica en todos los juegos aplicables",
+    "exportTags": "Exportar etiquetas",
+    "exportTagsDesc": "Crea un archivo lleno de etiquetas y categorías que pueden ser utilizadas por 'Importar etiquetas'",
+    "importTags": "Importar etiquetas",
+    "importTagsDesc": "Importa etiquetas desde un archivo creado por 'Exportar etiquetas'",
+    "migrateExtremeGames": "Migrar juegos extremos",
+    "migrateExtremeGamesDesc": "Remueve 'Extremo' de cualquier juego y asigna la etiqueta 'LEGACY-Extremo' a ellos",
+    "massImportGameData": "Mass Import Game Data",
+    "massImportGameDataDesc": "Mass imports Game Data packs, attempting to match their filename to a games UUID.",
     "servicesHeader": "Servicios en segundo plano",
     "servicesMissing": "No hay servicios.",
     "running": "Corriendo",
@@ -162,7 +199,7 @@
     "flashpoint": "BlueMaxima's Flashpoint",
     "flashpointDesc": "El proyecto de preservación para el que se creó esta aplicación, que pretende ser un archivo, un museo y una colección de juegos de Internet basados en la web.",
     "website": "Sitio web",
-    "flashpointLauncher": "Flashpoint Launcher",
+    "flashpointLauncher": "Aplicación Flashpoint",
     "flashpointLauncherDesc": "Una aplicación de escritorio de código abierto usada para navegar, administrar y jugar juegos desde el proyecto Flashpoint.",
     "version": "Versión",
     "license": "Licencia",
@@ -173,6 +210,8 @@
   "browse": {
     "noTitle": "Sin título",
     "by": "por",
+    "play": "Jugar",
+    "stop": "Detener",
     "noDeveloper": "Sin desarrollador",
     "alternateTitles": "Títulos alternativos",
     "noAlternateTitles": "Sin títulos alternativos",
@@ -219,6 +258,11 @@
     "searching": "Buscando...",
     "library": "Biblioteca",
     "defaultLibrary": "Biblioteca predeterminada",
+    "uninstallGame": "Desinstalar juego",
+    "installed": "Instalado",
+    "notInstalled": "Sin instalar",
+    "legacyGame": "Juego heredado",
+    "download": "Descargar",
     "thumbnail": "Miniatura",
     "screenshot": "Captura de pantalla",
     "dropImageHere": "Suelta una imagen aquí para agregarla",
@@ -247,6 +291,7 @@
     "noGameMatchedSearch": "Intenta buscar algo menos restrictivo."
   },
   "tags": {
+    "name": "Nombre",
     "noName": "Sin nombre",
     "description": "Descripción",
     "noDescription": "Sin descripción",
@@ -274,6 +319,9 @@
     "deleteAll": "Borrar todo",
     "deleteAllDesc": "Eliminar todas las curaciones que están cargadas actualmente",
     "saveImportedCurations": "Guardar curaciones importadas",
+    "keepArchiveKey": "Mantener el UUID del archivo de curación",
+    "symlinkCurationContent": "Carpeta de contenido de curación de 'Symlink' (Permisos de administrador en Windows, Requerido para MAD4FP)",
+    "useTagFilters": "Usar filtros de etiquetas en sugerencias",
     "openCurationsFolder": "Carpeta de curaciones",
     "openCurationsFolderDesc": "Abrir la carpeta de curaciones en el explorador",
     "openExportsFolder": "Curaciones exportadas",
@@ -288,6 +336,8 @@
     "loadArchiveDesc": "Cargar uno o más archivos de curación",
     "loadFolder": "Cargar carpeta",
     "loadFolderDesc": "Cargar una o más carpetas de curación",
+    "scanNewCurationFolders": "Scan For New Curations",
+    "scanNewCurationFoldersDesc": "Scans for curations that have been added after the initial scan",
     "noCurations": "No hay curaciones",
     "id": "Carpeta de curación",
     "heading": "Encabezado",
@@ -320,8 +370,14 @@
     "unusedPlatform": "'Plataforma' tiene un valor sin usar. ¡Asegúrate de que está escrito correctamente!",
     "nonExistingLibrary": "'Biblioteca' no es el nombre de una biblioteca existente! (La predeterminada será usada)",
     "nonContentFolders": "Carpetas diferentes a 'content' encontradas en la carpeta de curación. ¿Deberían estar ahí?",
+    "noTags": "No hay etiquetas en esta curación.",
+    "noSource": "'Source' is a required field.",
+    "unenteredTag": "El campo de texto de etiquetas no ha sido enviado.",
+    "noLogo": "No hay logotipo en esta curacion.",
+    "noScreenshot": "No hay captura de pantalla en esta curación.",
     "ilc_notHttp": "Usar HTTP.",
-    "ilc_nonExistant": "Selecciona un archivo existente de la carpeta 'contents' de tu curación."
+    "ilc_nonExistant": "Selecciona un archivo existente de la carpeta 'contents' de tu curación.",
+    "sort": "Ordenar curaciones (A-Z)"
   },
   "playlist": {
     "enterDescriptionHere": "Introduzca una descripción aquí...",
@@ -344,7 +400,7 @@
     "authorPlaceholder": "Autor...",
     "id": "ID",
     "by": "por",
-    "extreme": "extremo"
+    "extreme": "Extrema"
   },
   "misc": {
     "noBlankFound": "Ninguna {0} Encontrada",
@@ -363,8 +419,10 @@
     "viewThumbnailInFolder": "Ver miniatura en la carpeta",
     "viewScreenshotInFolder": "Ver captura de pantalla en la carpeta",
     "openFileLocation": "Abrir ubicación del archivo",
+    "addToPlaylist": "Añadir a la lista de reproducción",
     "duplicateMetaOnly": "Duplicado (Solo Metadatos)",
     "duplicateMetaAndImages": "Duplicado (Metadatos e Imágenes)",
+    "copyGameUUID": "Copiar UUID del juego",
     "exportMetaOnly": "Exportar (Solo Metadatos)",
     "exportMetaAndImages": "Exportar (Metadatos e Imágenes)",
     "exportMetaEdit": "Exportar correcciones de metadatos",
@@ -381,7 +439,7 @@
     "pathNotFound": "¡Ruta no encontrada!",
     "playlistConflict": "Conflicto en la lista de reproducción",
     "importedPlaylistAlreadyExists": "La lista de reproducción importada ya existe! - '{0}'",
-    "mergeOrStaySeperate": "¿Deberían fusionarse en una, o permanecer como listas de reproducción separadas?",
+    "importPlaylistAs": "Importar lista de reproducción como",
     "selectFileToExportMeta": "Seleccionar archivo para guardar metadatos",
     "selectFolderToExportMetaAndImages": "Seleccionar carpeta para guardar metadatos e imágenes",
     "replaceFilesQuestion": "¿Reemplazar archivos?",
@@ -401,26 +459,51 @@
     "restartNow": "¿Reiniciar ahora?",
     "restartToApplyUpgrade": "Esta mejora no será aplicada hasta que reinicies.\n¿Quieres hacer esto ahora?",
     "areYouSure": "¿Estás seguro?",
+    "areYouSureDelete": "¿Está seguro que desea eliminar esta entrada?",
+    "areYouSurePlaylistRemove": "¿Está seguro que desea eliminar esta entrada de la lista de reproducción?",
     "cancel": "Cancelar",
     "mergePlaylists": "Combinar listas de reproducción",
-    "newPlaylist": "Permanecer separadas",
-    "uploadPrivacyWarning": "Esto hará que tus registros estén disponibles públicamente.\nSe copiará un enlace al portapapeles.\n\n¿Estás seguro?",
+    "newPlaylist": "Mantener separados",
+    "uploadPrivacyWarning": "Esto hará que sus registros estén disponibles públicamente.\nSe copiará un enlace al portapapeles.\n\n¿Está seguro?",
     "overwriteFileTitle": "¡El archivo ya existe!",
     "overwriteFileMessage": "Ya existe un archivo con el mismo nombre. ¿Desea sobrescribirlo?",
-    "overwriteFileDetail": "Ruta del archivo:"
+    "overwriteFileDetail": "Ruta del archivo:",
+    "deleteTagFilterGroup": "¿Eliminar este grupo de filtros de etiquetas?",
+    "deleteCuration": "¿Eliminar esta curación?",
+    "importCuration": "¿Importar esta curación?",
+    "deleteGameImage": "¿Eliminar esta imagen de juego?",
+    "deletePlaylist": "¿Eliminar esta lista de reproducción?",
+    "importAllCurations": "¿Importar todas las curaciones?",
+    "deleteAllCurations": "¿Borrar todas las curaciones?",
+    "removePlaylistGame": "¿Eliminar este juego de la lista de reproducción?",
+    "deleteGame": "¿Eliminar este juego? Esto no se puede deshacer.",
+    "deleteGameData": "¿Eliminar estos datos del juego? Esto no se puede deshacer.",
+    "deleteAddApp": "¿Eliminar esta aplicación adicional?",
+    "deleteTagCategory": "¿Eliminar esta categoría de etiquetas?",
+    "deleteTag": "¿Eliminar esta etiqueta?",
+    "deleteTagAlias": "¿Eliminar este alias de etiqueta?",
+    "deleteSource": "¿Eliminar esta fuente?",
+    "uninstallGame": "¿Desinstalar este juego?",
+    "unableToUninstallGameData": "No se pudo eliminar el paquete de datos. ¿Está en uso? Intenta reiniciar el lanzador.",
+    "unableToDeleteGame": "No se pudo eliminar el juego. ¿Está en uso? Intenta reiniciar el lanzador.",
+    "downloadingGame": "Descargando juego...",
+    "verifyingGame": "Verificando juego...",
+    "aFewMinutes": "Esto puede tomar unos minutos."
   },
   "libraries": {
     "arcade": "Juegos",
     "arcadePlural": "Todos los juegos",
     "theatre": "Animaciones",
-    "theatrePlural": "Todas las animaciones"
+    "theatrePlural": "Todas las animaciones",
+    "auditorium": "Auditorio NG",
+    "auditoriumPlural": "Todas las animaciones NG"
   },
   "upgrades": {
     "infinity": "Flashpoint Infinity",
     "infinityDesc": "Archivos requeridos. Añade soporte para juegos Flash.",
     "tech": "Otras Tecnologías",
     "techDesc": "Añade soporte para otras tecnologías - Shockwave, Unity, Java, HTML5, etc.",
-    "screenshots": "Logos y capturas de pantalla",
-    "screenshotsDesc": "Añade logos para la vista en cuadrícula y capturas de pantalla para todos los juegos."
+    "screenshots": "Logotipos y capturas de pantalla",
+    "screenshotsDesc": "Añade logotipos para la vista en cuadrícula y capturas de pantalla para todos los juegos."
   }
 }
