--- a/lang/fr-FR.json
+++ b/lang/fr-FR.json
@@ -4,12 +4,12 @@
     "configHeader": "Configuration",
     "configDesc": "(Tu dois appuyer sur 'Sauvegarder & redémarrer' pour que certains changements s'appliquent)",
     "preferencesHeader": "Préférences",
-    "extremeGames": "Jeux Extrêmes",
-    "extremeGamesDesc": "Afficher les jeux à contenu sexuel, violent ou autre ne convenant pas aux enfants.",
+    "extremeGames": "Contenu Extrême",
+    "extremeGamesDesc": "Allow tags inside 'Extreme' tag filter groups and corresponding games to be shown.",
     "enableEditing": "Activer le mode édition",
-    "enableEditingDesc": "Permet l'édition de jeux, d'applications supplémentaires et de listes de lecture. Affiche également l'onglet 'Organiser'.",
+    "enableEditingDesc": "Active l'édition des jeux et des applications supplémentaires. Affiche également les onglets liés à l'édition.",
     "onDemandImages": "Images sur demande",
-    "onDemandImagesDesc": "Télécharger et sauvegarder les logos et captures d'écran manquants quand nécessaire.",
+    "onDemandImagesDesc": "Télécharge et sauvegarde les logos et captures d'écran manquants quand nécessaire.",
     "currentLanguage": "Langue",
     "currentLanguageDesc": "La langue qui sera principalement utilisée par le lanceur.",
     "fallbackLanguage": "Langue de secours",
@@ -20,15 +20,29 @@
     "flashpointPath": "Chemin de Flashpoint",
     "flashpointPathDesc": "Chemin vers le dossier de Flashpoint (peut être relatif)",
     "browse": "Parcourir",
+    "libraries": "Bibliothèques",
+    "randomLibraries": "Bibliothèques aléatoires",
+    "randomLibrariesDesc": "Bibliothèques à utiliser pour les sélections aléatoires sur la page d'accueil.",
+    "updateSource": "Update Source",
     "platforms": "Plateformes",
     "nativePlatforms": "Plateformes natives",
     "nativePlatformsDesc": "Utilisez des versions natives de ces plateformes. (Si non disponibles, Wine sera utilisé)",
+    "tagFilterGroups": "Groupes de filtres de balises",
+    "tagFilterGroupsDesc": "Ces groupes filtreront les suggestions et les jeux en dehors des résultats de recherche",
+    "editTagFilter": "Modifier le groupe de filtres de balises",
+    "duplicateTagFilter": "Dupliquer le groupe de filtres de balises",
+    "deleteTagFilter": "Supprimer le groupe de filtres de balises",
+    "appPathOverrides": "Remplacements du chemin de l'application",
+    "appPathOverridesDesc": "Remplace le chemin de l'application à gauche avec celui de droite lors du lancement de jeux.",
     "visualsHeader": "Visuels",
     "useCustomTitleBar": "Utiliser une barre de titre personnalisée",
     "useCustomTitleBarDesc": "Utilise une barre de titre personnalisée en haut de cette fenêtre.",
     "theme": "Thème",
-    "noTheme": "Pas de thème",
-    "themeDesc": "Chemin vers le fichier du thème à utiliser (relatif au dossier des thèmes).",
+    "noTheme": "Aucun thème",
+    "themeDesc": "ID du thème à utiliser.",
+    "logoSet": "Ensemble de logos",
+    "noLogoSet": "Aucun ensemble de logos défini",
+    "logoSetDesc": "ID de l'ensemble de logos à utiliser.",
     "advancedHeader": "Avancé",
     "showDeveloperTab": "Afficher l'onglet Développeur",
     "showDeveloperTabDesc": "Affiche l'onglet 'Développeur'. Ceci n'est probablement utile que pour les développeurs et les curateurs.",
@@ -36,7 +50,15 @@
     "serverDesc": "Processus serveur à exécuter au démarrage du lanceur.",
     "metadataServerHost": "Hôte du serveur de métadonnées",
     "metadataServerHostDesc": "Hôte d'un serveur de métadonnées. Utilisé pour synchroniser les mises à jours et nouvelles informations de jeu avec le lanceur.",
-    "saveAndRestart": "Sauvegarder et redémarrer"
+    "extensionsHeader": "Extensions",
+    "noExtensionsLoaded": "Pas d'extensions chargées, Installez-les dans '{0}'",
+    "extDevScripts": "Script(s) de développeur",
+    "extThemes": "Thème(s)",
+    "extLogoSets": "Ensemble(s) de logos",
+    "extApplications": "Application(s)",
+    "saveAndRestart": "Sauvegarder et redémarrer",
+    "saveAndClose": "Save and Close",
+    "tagFilterGroupEditor": "Tag Filter Group Editor"
   },
   "home": {
     "updateHeader": "Mise à jour du lanceur",
@@ -64,7 +86,7 @@
     "checkingUpgradeState": "Vérification de l'état de la mise à niveau...",
     "extrasHeader": "Suppléments",
     "favoritesPlaylist": "Liste des favoris",
-    "tagList": "Liste des filtres",
+    "tagList": "Liste de tags",
     "filterByPlatform": "Filtrer par plateforme",
     "plannedFeatures": "Découvre nos fonctionnalités à venir !",
     "notesHeader": "Notes",
@@ -76,16 +98,17 @@
   },
   "logs": {
     "filters": "Filtres",
+    "logLevels": "Niveaux de journalisation",
     "copyText": "Copier le texte",
     "clearLog": "Effacer l'historique",
-    "copy404Urls": "Copy 404 URLs",
+    "copy404Urls": "Copier les URL 404",
     "uploadLog": "Télécharger l'historique",
     "copiedToClipboard": "Copié dans le presse-papier"
   },
   "app": {
     "home": "Accueil",
     "browse": "Parcourir",
-    "tags": "Filtres",
+    "tags": "Tags",
     "categories": "Catégories",
     "logs": "Historique",
     "config": "Configuration",
@@ -141,8 +164,22 @@
     "importLegacyPlatformsDesc": "Importe les anciennes plateformes de 'Data/Platforms/' - ATTENTION : Cela va écraser les jeux déjà existant",
     "importLegacyPlaylists": "Importer les anciennes listes",
     "importLegacyPlaylistsDesc": "Importer les anciennes listes de '/Data/Playlist'",
+    "deleteAllPlaylists": "Supprimer toutes les listes de lecture",
+    "deleteAllPlaylistsDesc": "DANGEREUX! Supprime toutes les listes de lecture.",
     "importMetaEdits": "Importer les modifications de méta",
     "importMetaEditsDesc": "Importer toutes les modification de méta de '/Data/MetaEdits'",
+    "fixPrimaryAliases": "Corriger les alias primaires",
+    "fixPrimaryAliasesDesc": "Ajouter un alias primaire aux tags qui n'en ont pas",
+    "fixCommaTags": "Corriger les tags avec des virgules",
+    "fixCommaTagsDesc": "Divise les tags avec des virgules en plusieurs tags et les applique à tous les jeux applicables",
+    "exportTags": "Exporter les tags",
+    "exportTagsDesc": "Crée un fichier plein de tags et de catégories de tags pouvant être utilisés par 'Importer des tags'",
+    "importTags": "Importer des tags",
+    "importTagsDesc": "Importe les tags à partir d'un fichier créé par 'Exporter les tags'",
+    "migrateExtremeGames": "Migrate Extreme Games",
+    "migrateExtremeGamesDesc": "Removes 'Extreme' from any games and assigns the 'LEGACY-Extreme' tag to them",
+    "massImportGameData": "Mass Import Game Data",
+    "massImportGameDataDesc": "Mass imports Game Data packs, attempting to match their filename to a games UUID.",
     "servicesHeader": "Services de fond",
     "servicesMissing": "Il n'y a aucun service.",
     "running": "En cours",
@@ -162,7 +199,7 @@
     "flashpoint": "BlueMaxima's Flashpoint",
     "flashpointDesc": "Le but de ce projet est d'être une archive, un musée et une collection jouable de jeux jouables sur Internet.",
     "website": "Site internet",
-    "flashpointLauncher": "Flashpoint Launcher",
+    "flashpointLauncher": "Lanceur Flashpoint",
     "flashpointLauncherDesc": "Une application de bureau open-source permettant de parcourir, gérer et jouer à des jeux provenant du projet Flashpoint.",
     "version": "Version",
     "license": "Licence",
@@ -173,12 +210,14 @@
   "browse": {
     "noTitle": "Pas de titre",
     "by": "par",
+    "play": "Jouer",
+    "stop": "Arrêter",
     "noDeveloper": "Pas de développeur",
     "alternateTitles": "Titres alternatifs",
     "noAlternateTitles": "Il n'y a pas d'autres titre",
-    "tags": "Filtres",
-    "noTags": "Pas de filtres",
-    "enterTag": "Ajouter filtre",
+    "tags": "Tags",
+    "noTags": "Aucuns tags",
+    "enterTag": "Ajouter tag",
     "series": "Série",
     "noSeries": "Pas de série",
     "publisher": "Éditeur",
@@ -219,6 +258,11 @@
     "searching": "Recherche en cours...",
     "library": "Bibliothèque",
     "defaultLibrary": "Bibliothèque par défaut",
+    "uninstallGame": "Uninstall Game",
+    "installed": "Installé",
+    "notInstalled": "Pas installé",
+    "legacyGame": "Ancien jeu",
+    "download": "Télécharger",
     "thumbnail": "Miniature",
     "screenshot": "Capture d'écran",
     "dropImageHere": "Déposer une image ici pour l'ajouter",
@@ -247,25 +291,26 @@
     "noGameMatchedSearch": "Essaie de chercher quelque chose de moins restrictif."
   },
   "tags": {
-    "noName": "Pas de nom",
+    "name": "Nom",
+    "noName": "Aucun nom",
     "description": "Description",
-    "noDescription": "Pas de description",
+    "noDescription": "Aucune description",
     "category": "Catégorie",
-    "noCategory": "Pas de catégorie",
+    "noCategory": "Aucune catégorie",
     "newCategory": "Nouvelle catégorie",
-    "enterAlias": "Entrer le pseudo",
-    "aliases": "Pseudos",
-    "editTag": "Modifier le filtre",
+    "enterAlias": "Entrer l'alias",
+    "aliases": "Alias",
+    "editTag": "Modifier le tag",
     "color": "Couleur",
-    "noTagSelected": "Pas de filtre sélectionné",
+    "noTagSelected": "Pas de tag sélectionné",
     "clickToSelectTag": "Cliquer pour sélectionner un filtre",
-    "deleteTagAlias": "Effacer le filtre des pseudos",
-    "setPrimaryAlias": "Définir le pseudo principal",
+    "deleteTagAlias": "Supprimer l'alias du tag",
+    "setPrimaryAlias": "Définir l'alias principal",
     "mergeIntoTag": "Fusionner en filtre",
-    "mergeTag": "Fusionner les filtres",
-    "makeAliasWhenMerged": "Faire de ce filtre un pseudo ?",
-    "deleteTag": "Effacer le filtre",
-    "deleteTagCategory": "Effacer la catégorie \"filtre\"",
+    "mergeTag": "Fusionner les tags",
+    "makeAliasWhenMerged": "Faire de ce tag un alias ?",
+    "deleteTag": "Supprimer le tag",
+    "deleteTagCategory": "Supprimer la catégorie \"Tag\"",
     "locked": "Protégé pendant le traitement..."
   },
   "curate": {
@@ -274,6 +319,9 @@
     "deleteAll": "Tout effacer",
     "deleteAllDesc": "Effacer toutes les curations déjà chargées",
     "saveImportedCurations": "Enregistrer les curations importées",
+    "keepArchiveKey": "Garder l'UUID de l'archive de curation",
+    "symlinkCurationContent": "Lier symboliquement le dossier de contenu de curation (Nécessite les droits d'administrateur sous Windows, requis pour MAD4FP)",
+    "useTagFilters": "Utiliser les filtres de tags dans les suggestions",
     "openCurationsFolder": "Dossier de curations",
     "openCurationsFolderDesc": "Ouvrir le dossier de curations dans l'explorateur",
     "openExportsFolder": "Curations exportées",
@@ -288,6 +336,8 @@
     "loadArchiveDesc": "Charge une ou plusieurs archives de curations",
     "loadFolder": "Charger un dossier",
     "loadFolderDesc": "Charge un ou plusieurs dossiers de curations",
+    "scanNewCurationFolders": "Scan For New Curations",
+    "scanNewCurationFoldersDesc": "Scans for curations that have been added after the initial scan",
     "noCurations": "Aucune curation",
     "id": "Dossier de curations",
     "heading": "En-tête",
@@ -316,12 +366,18 @@
     "invalidLaunchCommand": "Le champ «Commande au lancement» ne remplit pas les prérequis suivants :",
     "releaseDateInvalid": "La date de sortie doit suivre AAAA-MM-JJ (le mois et le jour sont facultatifs).",
     "unusedApplicationPath": "Le chemin d'application contient une valeur inutilisée. Assure-toi qu'il est correctement orthographié!",
-    "unusedTags": "Les filtres suivants ne sont présents sur aucun autre jeu. Sont-ils corrects ?",
+    "unusedTags": "Les tags suivants ne sont présents sur aucun autre jeu. Sont-ils corrects ?",
     "unusedPlatform": "Le champ 'Plateforme' contient une valeur inutilisée. Assure-toi qu'elle est orthographiée correctement !",
     "nonExistingLibrary": "Le champ 'Bibliothèque' ne correspond à aucune bibliothèque existante ! (La bibliothèque par défaut sera utilisée)",
     "nonContentFolders": "D'autres types de dossier été trouvés dans le dossier des curations. Sont-ils censés y être ?",
+    "noTags": "There are no tags on this curation.",
+    "noSource": "'Source' is a required field.",
+    "unenteredTag": "The Tags text field hasn't been submitted.",
+    "noLogo": "There is no logo on this curation.",
+    "noScreenshot": "There is no screenshot on this curation.",
     "ilc_notHttp": "Utiliser HTTP.",
-    "ilc_nonExistant": "Indique un fichier existant dans ton dossier de curations."
+    "ilc_nonExistant": "Indique un fichier existant dans ton dossier de curations.",
+    "sort": "Sort Curations (A-Z)"
   },
   "playlist": {
     "enterDescriptionHere": "Ajouter une description ici...",
@@ -363,8 +419,10 @@
     "viewThumbnailInFolder": "Voir la miniature dans le dossier",
     "viewScreenshotInFolder": "Voir la capture d'écran dans le dossier",
     "openFileLocation": "Ouvrir l'emplacement du fichier",
+    "addToPlaylist": "Ajouter à la liste de lecture",
     "duplicateMetaOnly": "Dupliquer (seulement les meta-données)",
     "duplicateMetaAndImages": "Dupliquer (meta-données et images)",
+    "copyGameUUID": "Copier l'UUID du jeu",
     "exportMetaOnly": "Exporter (seulement les meta-données)",
     "exportMetaAndImages": "Exporter (meta-données et images)",
     "exportMetaEdit": "Exporter les modifications de meta-données",
@@ -380,8 +438,8 @@
     "flashpointPathInvalid": "Chemin de Flashpoint non valide !",
     "pathNotFound": "Chemin introuvable !",
     "playlistConflict": "Conflit de liste de lecture",
-    "importedPlaylistAlreadyExists": "La liste de lecture importée existe déjà ! - '{0}'",
-    "mergeOrStaySeperate": "Doivent-elles être fusionnées, ou rester des listes indépendantes ?",
+    "importedPlaylistAlreadyExists": "La playlist importée existe déjà avec le même nom ! - '{0}'",
+    "importPlaylistAs": "Importer une liste de lecture en tant que",
     "selectFileToExportMeta": "Sélectionnez le fichier où sauvegarder les méta-données",
     "selectFolderToExportMetaAndImages": "Sélectionnez le dossier où sauvegarder les méta-données et les images",
     "replaceFilesQuestion": "Remplacer les fichiers ?",
@@ -401,19 +459,44 @@
     "restartNow": "Redémarrer maintenant ?",
     "restartToApplyUpgrade": "Cette mise à niveau ne sera appliquée qu'après un redémarrage.\nVeux-tu le faire maintenant ?",
     "areYouSure": "Es-tu sûr ?",
+    "areYouSureDelete": "Êtes-vous sûr de vouloir supprimer cette entrée ?",
+    "areYouSurePlaylistRemove": "Êtes-vous sûr de vouloir supprimer cette entrée de la liste de lecture?",
     "cancel": "Annuler",
     "mergePlaylists": "Fusionner les listes de lecture",
     "newPlaylist": "Les laisser séparées",
     "uploadPrivacyWarning": "Cela va rendre ton historique public.\nUn lien va être copié dans ton presse-papier.\n\nEs-tu sûr ?",
     "overwriteFileTitle": "Le fichier existe déjà !",
     "overwriteFileMessage": "Un fichier du même nom existe déjà. Veux-tu l'écraser ?",
-    "overwriteFileDetail": "Chemin du fichier :"
+    "overwriteFileDetail": "Chemin du fichier :",
+    "deleteTagFilterGroup": "Supprimer ce groupe de filtres de balises?",
+    "deleteCuration": "Supprimer cette curation?",
+    "importCuration": "Import this Curation?",
+    "deleteGameImage": "Supprimer cette image de jeu?",
+    "deletePlaylist": "Supprimer cette liste de lecture?",
+    "importAllCurations": "Importer toutes les curations?",
+    "deleteAllCurations": "Supprimer toutes les curations?",
+    "removePlaylistGame": "Retirer ce jeu de la liste de lecture?",
+    "deleteGame": "Delete this Game? This cannot be undone.",
+    "deleteGameData": "Delete this Game Data? This cannot be undone.",
+    "deleteAddApp": "Delete this Add App?",
+    "deleteTagCategory": "Supprimer cette catégorie de tag ?",
+    "deleteTag": "Supprimer cette balise?",
+    "deleteTagAlias": "Supprimer cet alias de balise?",
+    "deleteSource": "Delete this Source?",
+    "uninstallGame": "Uninstall this Game?",
+    "unableToUninstallGameData": "Unable to delete data pack. Is it in use? Try restarting the launcher.",
+    "unableToDeleteGame": "Unable to delete game. Is it in use? Try restarting the launcher.",
+    "downloadingGame": "Downloading Game...",
+    "verifyingGame": "Verifying Game...",
+    "aFewMinutes": "This may take a few minutes."
   },
   "libraries": {
     "arcade": "Jeux",
     "arcadePlural": "Tous les jeux",
     "theatre": "Animations",
-    "theatrePlural": "Toutes les animations"
+    "theatrePlural": "Toutes les animations",
+    "auditorium": "Auditorium NG",
+    "auditoriumPlural": "Toutes les animations NG"
   },
   "upgrades": {
     "infinity": "Flashpoint Infinity",
