--- a/lang/hu-HU.json
+++ b/lang/hu-HU.json
@@ -4,10 +4,10 @@
     "configHeader": "Beállítások",
     "configDesc": "(Bizonyos változások csak mentés és újraindítás után lépnek érvénybe)",
     "preferencesHeader": "Preferenciák",
-    "extremeGames": "Extrém Játékok",
-    "extremeGamesDesc": "Szexuális, erőszakos tartalmú vagy egyéb, gyerekek számára nem való játékok megjelenítése",
+    "extremeGames": "Extrém tartalom",
+    "extremeGamesDesc": "Tagek láthatóságának engedélyezése az 'Extrém' tag-el szűrt csoportokban és a megegyező játékok mutatása.",
     "enableEditing": "Szerkesztés engedélyezése",
-    "enableEditingDesc": "Játékok, egyéb alkalmazások és játéklisták szerkesztését engedélyezi. Ez láthatóvá teszi a \"Kurátor\" lapot is.",
+    "enableEditingDesc": "Játékok és további alkalmazások módosítását engedélyezi, valamint a szerkesztéshez kapcsolódó lapokat is mutatja.",
     "onDemandImages": "Igény szerinti Képek",
     "onDemandImagesDesc": "Letölti és lementi a hiányzó logókat és képernyőmentéseket, mivel szükségesek.",
     "currentLanguage": "Nyelv",
@@ -20,15 +20,29 @@
     "flashpointPath": "Flashpoint útvonal",
     "flashpointPathDesc": "Útvonal a Flashpoint mappához. (Lehet relatív)",
     "browse": "Böngészés",
+    "libraries": "Könyvtárak",
+    "randomLibraries": "Véletlenszerű Könyvtárak",
+    "randomLibrariesDesc": "Könyvtárak használata a Véletlenszerű Választásokhoz a főoldalon.",
+    "updateSource": "Forrás frissítése",
     "platforms": "Platformok",
     "nativePlatforms": "Natív Platformok",
     "nativePlatformsDesc": "Natív, elsődleges fejlesztett verziók használata ezekben a futtatható környezetekben (ha nem elérhető, akkor a  Wine  t fogja használni)",
+    "tagFilterGroups": "Tag szűrési csoportok",
+    "tagFilterGroupsDesc": "Ezek a csoportok ki fogják szűrni a javaslatokat és a játékokat a keresési találatok közül",
+    "editTagFilter": "Tag szűrő csoportok módosítása",
+    "duplicateTagFilter": "Duplikált tag szűrési csoport",
+    "deleteTagFilter": "Tag szűrési csoport törlése",
+    "appPathOverrides": "Applikáció Útvonal Felülírása",
+    "appPathOverridesDesc": "A baloldali applikáció útvonalát felülírja a jobboldalival játék indításakor.",
     "visualsHeader": "Kinézet",
     "useCustomTitleBar": "Saját címsáv használata",
     "useCustomTitleBarDesc": "Saját címsáv használata az ablak tetején.",
     "theme": "Téma",
     "noTheme": "Nincs téma",
-    "themeDesc": "Fájl útvonal a használandó témához (A \"themes\" mappához viszonyítva).",
+    "themeDesc": "A beállítandó logó ID-je.",
+    "logoSet": "Logó beállítva",
+    "noLogoSet": "Nincs Beállítva Logó",
+    "logoSetDesc": "A beállítandó logó ID-je.",
     "advancedHeader": "Haladó",
     "showDeveloperTab": "Fejlesztői lap megjelenítése",
     "showDeveloperTabDesc": "Ez lehet csak fejlesztők és kurátorok számára hasznos.",
@@ -36,7 +50,15 @@
     "serverDesc": "Melyik Szerver folyamatot futtassa a launcher indításakor",
     "metadataServerHost": "Metaadat Szerver Host",
     "metadataServerHostDesc": "A metaadat szerver Hostja. Az új és frissített játékok információját szinkronizálja a  Launcher-el",
-    "saveAndRestart": "Mentés és Újraindítás"
+    "extensionsHeader": "Kiegészítők",
+    "noExtensionsLoaded": "Nincs Kiegészítő betöltve, telepítse őket a",
+    "extDevScripts": "Fejlesztői Script(ek)",
+    "extThemes": "Téma(k)",
+    "extLogoSets": "Logó(k) beállítva",
+    "extApplications": "Alkalmazás(ok)",
+    "saveAndRestart": "Mentés és Újraindítás",
+    "saveAndClose": "Mentés és bezárás",
+    "tagFilterGroupEditor": "Tag filter csoport szerkesztő"
   },
   "home": {
     "updateHeader": "Program frissítése",
@@ -76,6 +98,7 @@
   },
   "logs": {
     "filters": "Szűrők",
+    "logLevels": "Log szintek",
     "copyText": "Szöveg másolása",
     "clearLog": "Napló törlése",
     "copy404Urls": "404-es URL-ek másolása",
@@ -141,8 +164,22 @@
     "importLegacyPlatformsDesc": "Archív Platformok importálása a \"Data/Platforms/-ból -Figyelmeztetés: Felül fogja írni az ütköző játékokat",
     "importLegacyPlaylists": "Archív platformok importálása",
     "importLegacyPlaylistsDesc": "Archív Lejátszólisták importálása a /Data/Playlists-ből",
+    "deleteAllPlaylists": "Összes Lejátszólista törlése",
+    "deleteAllPlaylistsDesc": "VESZÉLYES! Összes lejátszólistát törli.",
     "importMetaEdits": "Meta módosítások importálása",
     "importMetaEditsDesc": "ÖSSZES Meta szerkesztés importálása a /Data/MetaEdits-ből",
+    "fixPrimaryAliases": "Elsődleges név beállítása",
+    "fixPrimaryAliasesDesc": "Elsődleges név beállítása összes olyan tag-hez, aminek nincsen",
+    "fixCommaTags": "Tag-ek korrigálása vesszőkkel",
+    "fixCommaTagsDesc": "A tageket vesszővel szétválasztja külön tagek-é, és az összes alkalmazható játékra alkalmazza",
+    "exportTags": "Tag-ek exportálása",
+    "exportTagsDesc": "Egy tagekkel és tag kategóriákkal teli fájlt készít, amelyet a \"Tagek Importálása\" használ",
+    "importTags": "Tagek importálása",
+    "importTagsDesc": "Tagek Importálása egy \"Tagek Exportálása\" által készített fájlból",
+    "migrateExtremeGames": "Extrém játékok költöztetése",
+    "migrateExtremeGamesDesc": "\"Extrém\" tag levétele bármelyik játékról és a \"LEGACY-Extreme\" tag hozzárendelése",
+    "massImportGameData": "Játék adatok tömeges importálása",
+    "massImportGameDataDesc": "Játék adatok tömeges importálása, ami megpróbálja a fájlneveket a játékok UUID-vel összeegyeztetni.",
     "servicesHeader": "Háttérszolgáltatások",
     "servicesMissing": "Nincs futó szolgáltatás",
     "running": "Folyamatban",
@@ -173,6 +210,8 @@
   "browse": {
     "noTitle": "Nincs cím",
     "by": "által",
+    "play": "Indítás",
+    "stop": "Megállítás",
     "noDeveloper": "Nincs fejlesztő",
     "alternateTitles": "Alternatív címek",
     "noAlternateTitles": "Nincsen alternatív cím(ek)",
@@ -219,6 +258,11 @@
     "searching": "Keresés...",
     "library": "Könyvtár",
     "defaultLibrary": "Alapértelmezett könyvtár",
+    "uninstallGame": "Játék törlése",
+    "installed": "Telepítve",
+    "notInstalled": "Nincs telepítve",
+    "legacyGame": "\"Legacy\" játékok (nem gamezip formátumúak)",
+    "download": "Letöltés",
     "thumbnail": "Előnézet",
     "screenshot": "Képernyőmentés",
     "dropImageHere": "Húzzon be egy képet ide, hogy hozzáadja",
@@ -247,6 +291,7 @@
     "noGameMatchedSearch": "Próbáljon meg szélesebb körben keresni."
   },
   "tags": {
+    "name": "Név",
     "noName": "Nincs név",
     "description": "Leírás",
     "noDescription": "Nincs Leírás",
@@ -274,6 +319,9 @@
     "deleteAll": "Összes törlése",
     "deleteAllDesc": "A jelenleg betöltött összes kuráció törlése",
     "saveImportedCurations": "Importált Kurációk elmentése",
+    "keepArchiveKey": "Kuráció UUID-jének a megőrzése",
+    "symlinkCurationContent": "Symlink Kurációs Tartalom Mappa (Admin megerősítés Windows alatt, MAD4FP-hez szükséges)",
+    "useTagFilters": "Tag szűrő használata a javaslatoknál",
     "openCurationsFolder": "Kurációs Mappa",
     "openCurationsFolderDesc": "Megnyitja a Kurációs mappát a fájlkezelőben",
     "openExportsFolder": "Exportált Kurációk",
@@ -288,6 +336,8 @@
     "loadArchiveDesc": "Egy vagy több Kurációs archívumot betölt",
     "loadFolder": "Mappa betöltése",
     "loadFolderDesc": "Egy vagy több Kurációs mappát betölt",
+    "scanNewCurationFolders": "Új kurációk utáni keresés",
+    "scanNewCurationFoldersDesc": "Kurációk utáni keresés amiket a kezdeti keresés után adtak hozzá",
     "noCurations": "Nincs Kuráció",
     "id": "Kurációs Mappa",
     "heading": "Fejléc",
@@ -320,8 +370,14 @@
     "unusedPlatform": "\"Platformnak' egy használaton kívüli értéke van. Győződjön meg róla, hogy helyesen lett-e leírva!",
     "nonExistingLibrary": "\"Könyvtár\" nem egy létező könyvtár neve (Alapértelmezett lesz használva)",
     "nonContentFolders": "Nem-Tartalmi mappák találhatók a Kurációs mappában. Ezeknek itt a helyük?",
+    "noTags": "Nincsenek tagek ebben a kurációban.",
+    "noSource": "'Forrás' egy kötelező mező.",
+    "unenteredTag": "A tag szövegmező nem lett kitöltve.",
+    "noLogo": "Nincsen logó ebben a kurációban.",
+    "noScreenshot": "Nincsen képernyőmentés ebben a kurációban.",
     "ilc_notHttp": "HTTP használata.",
-    "ilc_nonExistant": "Egy meglétező fájl-ra mutat a kurátori \"tartalom\" mappában."
+    "ilc_nonExistant": "Egy meglétező fájl-ra mutat a kurátori \"tartalom\" mappában.",
+    "sort": "Kurációk rendezése (A-Z)"
   },
   "playlist": {
     "enterDescriptionHere": "Adja meg a leírást itt.....",
@@ -363,8 +419,10 @@
     "viewThumbnailInFolder": "Előnézeti kép megtekintése mappában",
     "viewScreenshotInFolder": "Képernyőmentések megtekintése mappában",
     "openFileLocation": "Fájl helyének megnyitása",
+    "addToPlaylist": "Lejátszási listához való hozzáadás",
     "duplicateMetaOnly": "Duplikát (csak Meta)",
     "duplicateMetaAndImages": "Duplikátum (Meta &&Képek)",
+    "copyGameUUID": "Játék UUID másolása",
     "exportMetaOnly": "Exportálás (csak a Meta)",
     "exportMetaAndImages": "Exportálás (Meta&&Képek)",
     "exportMetaEdit": "Meta módosítás exportálása",
@@ -380,8 +438,8 @@
     "flashpointPathInvalid": "Flashpoint elérési út nem helyes!",
     "pathNotFound": "Elérési út nem található!",
     "playlistConflict": "Lejátszólista ütközés",
-    "importedPlaylistAlreadyExists": "Importált Lejátszólista már létezik!",
-    "mergeOrStaySeperate": "Egybe legyenek vonva vagy maradjanak külön lejátszólistaként?",
+    "importedPlaylistAlreadyExists": "Létezik már lejátszólista azonos névvel",
+    "importPlaylistAs": "Lejátszólista importálása mint",
     "selectFileToExportMeta": "Fájl kiválasztása a meta elmentéséhez",
     "selectFolderToExportMetaAndImages": "Válassza ki a mappát ahova menteni szeretné a meta-t és a képeket",
     "replaceFilesQuestion": "Fájlok cseréje?",
@@ -401,19 +459,44 @@
     "restartNow": "Újraindítás most?",
     "restartToApplyUpgrade": "A frissítés nem fog életbe lépni ameddig újra nem indítja a klienst.\nKívánja ezt most megtenni?",
     "areYouSure": "Biztos benne?",
+    "areYouSureDelete": "Biztos hogy törölni akarja ezt a tételt?",
+    "areYouSurePlaylistRemove": "Biztos hogy törölni akarja ezt a tételt a lejátszási listáról?",
     "cancel": "Mégsem",
     "mergePlaylists": "Lejátszólisták összevonása",
-    "newPlaylist": "Maradjon külön",
-    "uploadPrivacyWarning": "Ez a logfájljait nyilvánosan elérhetővé fogja tenni. Egy link a vágólapjára lesz másolva.\n\nBiztos benne?",
+    "newPlaylist": "Maradjanak külön",
+    "uploadPrivacyWarning": "Ez a logfájlokat nyilvánosan elérhetővé fogja tenni. Egy link be lesz másolva a vágólapra.\n\nBiztos benne?",
     "overwriteFileTitle": "A fájl már létezik!",
     "overwriteFileMessage": "Egy azonos nevű fájl már létezik. Szeretné felülírni?",
-    "overwriteFileDetail": "Fájl útvonal:"
+    "overwriteFileDetail": "Fájl útvonal:",
+    "deleteTagFilterGroup": "Tag szűrési csoport törlése?",
+    "deleteCuration": "Kuráció törlése?",
+    "importCuration": "Kuráció importálása?",
+    "deleteGameImage": "Játék kép törlése?",
+    "deletePlaylist": "Lejátszólista törlése?",
+    "importAllCurations": "Összes kuráció importálása?",
+    "deleteAllCurations": "Összes kuráció törlése?",
+    "removePlaylistGame": "Játék eltávolítása a lejátszólistáról?",
+    "deleteGame": "Játék törlése? Ez nem csinálható vissza.",
+    "deleteGameData": "Játék adatainak törlése? Ez nem csinálható vissza.",
+    "deleteAddApp": "Törli az alkalmazást?",
+    "deleteTagCategory": "Tag kategória törlése?",
+    "deleteTag": "Tag törlése?",
+    "deleteTagAlias": "Tag alias törlése?",
+    "deleteSource": "Forrás törlése?",
+    "uninstallGame": "Játék törlése?",
+    "unableToUninstallGameData": "Az adatcsomag törlése nem sikerült. Használatban van? Próbálja meg újraindítani a launcher-t.",
+    "unableToDeleteGame": "A játék törlése nem lehetséges. Használatban van? Próbálja meg újraindítani a launcher-t.",
+    "downloadingGame": "Játék letöltése...",
+    "verifyingGame": "Játék ellenőrzése...",
+    "aFewMinutes": "Ez néhány percig eltarthat."
   },
   "libraries": {
     "arcade": "Játékok",
     "arcadePlural": "Összes Játék",
     "theatre": "Animációk",
-    "theatrePlural": "Összes Animáció"
+    "theatrePlural": "Összes Animáció",
+    "auditorium": "NG Auditórium",
+    "auditoriumPlural": "Összes NG Animáció"
   },
   "upgrades": {
     "infinity": "Flashpoint Infinity",
