--- a/lang/it-IT.json
+++ b/lang/it-IT.json
@@ -1,13 +1,13 @@
 {
-  "name": "Italiano",
+  "name": "Inglese",
   "config": {
     "configHeader": "Impostazioni",
     "configDesc": "(Devi premere 'Salva & riavvia' per rendere effettive alcune modifiche)",
     "preferencesHeader": "Preferenze",
-    "extremeGames": "Giochi estremi",
-    "extremeGamesDesc": "Mostra giochi con contenuti sessuali, violenti o di altro tipo non adatti ai bambini.",
+    "extremeGames": "Contenuto Estremo",
+    "extremeGamesDesc": "Consenti di mostrare i tag all'interno dei gruppi di filtro tag 'Extreme' e delle partite corrispondenti.",
     "enableEditing": "Abilita Modifica",
-    "enableEditingDesc": "Abilita la modifica di giochi, applicazioni aggiuntive e playlist. Mostra anche la scheda 'Curate'.",
+    "enableEditingDesc": "Abilita la modifica dei giochi e delle applicazioni aggiuntive. Mostra anche le schede relative alla modifica.",
     "onDemandImages": "Immagini Su Richiesta",
     "onDemandImagesDesc": "Scaricare e salvare loghi e schermate mancanti in quanto necessari.",
     "currentLanguage": "Lingua",
@@ -20,15 +20,29 @@
     "flashpointPath": "Percorso File di Flashpoint",
     "flashpointPathDesc": "Percorso alla cartella Flashpoint (può variare lievemente)",
     "browse": "Sfoglia",
+    "libraries": "Librerie",
+    "randomLibraries": "Librerie Casuali",
+    "randomLibrariesDesc": "Librerie da usare per le Scelte Casuali nella home page.",
+    "updateSource": "Aggiorna Sorgente",
     "platforms": "Piattaforme",
     "nativePlatforms": "Piattaforme native",
     "nativePlatformsDesc": "Usa versioni native di queste piattaforme. (Se non sono disponibili utilizzerà Wine)",
+    "tagFilterGroups": "Gruppi di filtri di etichette",
+    "tagFilterGroupsDesc": "Questi gruppi filtreranno i suggerimenti e i giochi dai risultati della ricerca",
+    "editTagFilter": "Modifica Gruppi di filtri di etichette",
+    "duplicateTagFilter": "Duplica Gruppo di filtri di etichette",
+    "deleteTagFilter": "Elimina Gruppo di filtri di etichette",
+    "appPathOverrides": "Sovvrascrittura Percorso App",
+    "appPathOverridesDesc": "Sostituisce il percorso dell'applicazione a sinistra con quello a destra quando si lanciano i giochi.",
     "visualsHeader": "Apparenza",
     "useCustomTitleBar": "Usa Barra del Titolo personalizzata",
     "useCustomTitleBarDesc": "Usa una barra dei titoli personalizzata in cima a questa finestra.",
     "theme": "Tema",
     "noTheme": "Nessun Tema",
-    "themeDesc": "Percorso del file del tema da usare (relativo alla cartella dei temi).",
+    "themeDesc": "ID del tema da usare.",
+    "logoSet": "Set Logo",
+    "noLogoSet": "Nessun Logo Set",
+    "logoSetDesc": "ID del logo impostato da usare.",
     "advancedHeader": "Avanzate",
     "showDeveloperTab": "Mostra Scheda Sviluppatore",
     "showDeveloperTabDesc": "Mostra la scheda 'Sviluppatore'. Molto probabilmente utile solo per sviluppatori e curatori.",
@@ -36,7 +50,15 @@
     "serverDesc": "Quale Processo Server da eseguire all'avvio del launcher.",
     "metadataServerHost": "Host Server Metadati",
     "metadataServerHostDesc": "Host di un server di metadati. Utilizzato per sincronizzare le informazioni di gioco nuove e aggiornate al launcher.",
-    "saveAndRestart": "Salva e Riavvia"
+    "extensionsHeader": "Estensioni",
+    "noExtensionsLoaded": "Nessuna estensione caricata, installale su '{0}'",
+    "extDevScripts": "Script Sviluppatore(ri)",
+    "extThemes": "Tema(i)",
+    "extLogoSets": "Set Di Logo(hi)",
+    "extApplications": "Applicazione(i)",
+    "saveAndRestart": "Salva e Riavvia",
+    "saveAndClose": "Salva e Chiudi",
+    "tagFilterGroupEditor": "Editor Gruppo Filtri Etichette"
   },
   "home": {
     "updateHeader": "Aggiornamento Launcher",
@@ -76,6 +98,7 @@
   },
   "logs": {
     "filters": "Filtri",
+    "logLevels": "Livelli Di Log",
     "copyText": "Copia testo",
     "clearLog": "Svuota Registro Eventi",
     "copy404Urls": "Copia 404 URL",
@@ -141,8 +164,22 @@
     "importLegacyPlatformsDesc": "Imports Legacy Platforms from `Data/Platforms/` - ATTENZIONE: Sovrascriverà i giochi in conflitto",
     "importLegacyPlaylists": "Importa Scalette Legacy",
     "importLegacyPlaylistsDesc": "Importa Scalette Legacy da `/Data/Playlists`",
+    "deleteAllPlaylists": "Elimina Tutte le playlist",
+    "deleteAllPlaylistsDesc": "PERICOLO! Elimina tutte le playlist.",
     "importMetaEdits": "Import Meta Edits",
     "importMetaEditsDesc": "Importa TUTTE le modifiche dei Meta da `/Data/MetaEdits`",
+    "fixPrimaryAliases": "Correggi Alias Primari",
+    "fixPrimaryAliasesDesc": "Aggiungi un alias primario a ogni etichetta a cui mancano",
+    "fixCommaTags": "Correggi etichette con le virgole",
+    "fixCommaTagsDesc": "Divide le etichette con le virgole in molte etichette e li applica a tutti i giochi applicabili",
+    "exportTags": "Esporta Etichette",
+    "exportTagsDesc": "Crea un file pieno di eticehtte e categorie di eticehtte che possono essere utilizzati da 'Importa eticehtte'",
+    "importTags": "Importa Etichette",
+    "importTagsDesc": "Importa eticehtte da un file creato da 'Esporta etichetta'",
+    "migrateExtremeGames": "Migrare Giochi Estremi",
+    "migrateExtremeGamesDesc": "Rimuove 'Estremo' da qualsiasi gioco e assegna il tag 'Estremo-ORIGINALE' a loro",
+    "massImportGameData": "Importazione Massiva Dati Di Gioco",
+    "massImportGameDataDesc": "Importazione massica di pacchetti di dati di gioco, cercando di abbinare il loro nome di file a un UUID di gioco.",
     "servicesHeader": "Servizi in secondo piano",
     "servicesMissing": "Non ci sono servizi.",
     "running": "In esecuzione",
@@ -173,6 +210,8 @@
   "browse": {
     "noTitle": "Nessun titolo",
     "by": "da",
+    "play": "Riproduci",
+    "stop": "Interrompi",
     "noDeveloper": "Nessun sviluppatore",
     "alternateTitles": "Titoli alternativi",
     "noAlternateTitles": "Nessun titolo alternativo",
@@ -219,6 +258,11 @@
     "searching": "Ricerca...",
     "library": "Libreria",
     "defaultLibrary": "Libreria predefinita",
+    "uninstallGame": "Disinstalla giochi",
+    "installed": "Installato",
+    "notInstalled": "Non installato",
+    "legacyGame": "Gioco Legacy",
+    "download": "Scarica",
     "thumbnail": "Anteprima",
     "screenshot": "Schermate",
     "dropImageHere": "Trascina un'immagine qui per aggiungerla",
@@ -247,6 +291,7 @@
     "noGameMatchedSearch": "Prova a cercare qualcosa di meno specifico."
   },
   "tags": {
+    "name": "Nome",
     "noName": "Nessun Nome",
     "description": "Descrizione",
     "noDescription": "Nessuna Descrizione",
@@ -274,6 +319,9 @@
     "deleteAll": "Elimina tutto",
     "deleteAllDesc": "Elimina tutte le curazioni che sono attualmente caricate",
     "saveImportedCurations": "Salva Curature Importate",
+    "keepArchiveKey": "Mantieni UUID Archivio Curazione",
+    "symlinkCurationContent": "Cartella dei contenuti della curva del collegamento simbolico (prompt dell'amministratore su Windows, richiesto per MAD4FP)",
+    "useTagFilters": "Usa filtri etichette nei suggerimenti",
     "openCurationsFolder": "Cartella Curatela",
     "openCurationsFolderDesc": "Apri la cartella Curations in explorer",
     "openExportsFolder": "Curazioni esportate",
@@ -288,6 +336,8 @@
     "loadArchiveDesc": "Carica uno o più archivi",
     "loadFolder": "Carica Cartella",
     "loadFolderDesc": "Carica una o più cartelle",
+    "scanNewCurationFolders": "Scansiona Per Nuove Curazioni",
+    "scanNewCurationFoldersDesc": "Scansioni per curare che sono state aggiunte dopo la scansione iniziale",
     "noCurations": "Nessuna curatela",
     "id": "Cartella Curatela",
     "heading": "Intestazione",
@@ -320,8 +370,14 @@
     "unusedPlatform": "'Piattaforma' ha un valore non utilizzato. Assicurati che sia scritto correttamente!",
     "nonExistingLibrary": "'Libreria' non è il nome di una libreria esistente! (Verrà utilizzata quella predefinita)",
     "nonContentFolders": "Nessuna cartella di contenuto trovata nella cartella Curation. Dovrebbero esserci?",
+    "noTags": "Non ci sono etichette su questa curazione.",
+    "noSource": "'Fonte' è un campo obbligatorio.",
+    "unenteredTag": "Il campo di testo etichetta non è stato inviato.",
+    "noLogo": "Non c'è nessun logo su questa curazione.",
+    "noScreenshot": "Non c'è nessuna schermata su questa curazione.",
     "ilc_notHttp": "Usa HTTP.",
-    "ilc_nonExistant": "Punta ad un file esistente nella cartella 'contenuto' della tua curva."
+    "ilc_nonExistant": "Punta ad un file esistente nella cartella 'contenuto' della tua curva.",
+    "sort": "Ordina Curazioni (A-Z)"
   },
   "playlist": {
     "enterDescriptionHere": "Inserisci qui una descrizione...",
@@ -363,8 +419,10 @@
     "viewThumbnailInFolder": "Visualizza Anteprima nella cartella",
     "viewScreenshotInFolder": "Visualizza Schermate nella cartella",
     "openFileLocation": "Apri la cartella",
+    "addToPlaylist": "Aggiungi alla Playlist",
     "duplicateMetaOnly": "Duplica (Solo Meta)",
     "duplicateMetaAndImages": "Duplica (Meta & Immagini)",
+    "copyGameUUID": "Copia UUUID Del Gioco",
     "exportMetaOnly": "Esporta (Solo Meta)",
     "exportMetaAndImages": "Esporta (Meta && immagini)",
     "exportMetaEdit": "Esporta Meta Edit",
@@ -380,8 +438,8 @@
     "flashpointPathInvalid": "Percorso Flashpoint non valido!",
     "pathNotFound": "Percorso non trovato!",
     "playlistConflict": "Conflitto Playlist",
-    "importedPlaylistAlreadyExists": "La playlist importata esiste già! - '{0}'",
-    "mergeOrStaySeperate": "Dovrebbero fondersi in uno, o rimanere come playlist seperate?",
+    "importedPlaylistAlreadyExists": "La playlist importata esiste già con lo stesso nome! - '{0}'",
+    "importPlaylistAs": "Importa playlist come",
     "selectFileToExportMeta": "Seleziona il file su cui salvare meta",
     "selectFolderToExportMetaAndImages": "Seleziona la cartella in cui salvare meta e immagini",
     "replaceFilesQuestion": "Sostituire i file?",
@@ -401,19 +459,44 @@
     "restartNow": "Riavviare ora?",
     "restartToApplyUpgrade": "Questo aggiornamento non sarà applicato fino al riavvio.\nDesideri farlo ora?",
     "areYouSure": "Sei sicuro?",
+    "areYouSureDelete": "Sei sicuro di voler eliminare questa voce?",
+    "areYouSurePlaylistRemove": "Sei sicuro di voler rimuovere la voce dalla playlist?",
     "cancel": "Annulla",
     "mergePlaylists": "Unisci le playlist",
-    "newPlaylist": "Soggiorno Seperate",
+    "newPlaylist": "Resta Separato",
     "uploadPrivacyWarning": "Questo renderà i tuoi log disponibili pubblicamente.\nUn link sarà copiato negli appunti.\n\nSei sicuro?",
     "overwriteFileTitle": "Il file esiste già!",
     "overwriteFileMessage": "Un file con lo stesso nome esiste già, desideri sovrascriverlo?",
-    "overwriteFileDetail": "Percorso del file:"
+    "overwriteFileDetail": "Percorso del file:",
+    "deleteTagFilterGroup": "Eliminare questo gruppo di filtri etichette?",
+    "deleteCuration": "Eliminare questa Scelta?",
+    "importCuration": "Importare questa Curazione?",
+    "deleteGameImage": "Eliminare questa immagine di gioco?",
+    "deletePlaylist": "Eliminare questa scaletta?",
+    "importAllCurations": "Importare tutte le Selezioni?",
+    "deleteAllCurations": "Eliminare tutte le Selezioni?",
+    "removePlaylistGame": "Rimuovere questo gioco dalla scaletta?",
+    "deleteGame": "Eliminare questo gioco? Questo non può essere annullato.",
+    "deleteGameData": "Eliminare questi dati di gioco? Questo non può essere annullato.",
+    "deleteAddApp": "Eliminare questa aggiunta di app?",
+    "deleteTagCategory": "Eliminare questa etichetta di categoria?",
+    "deleteTag": "Eliminare questa etichetta?",
+    "deleteTagAlias": "Eliminare questo Alias etichetta?",
+    "deleteSource": "Eliminare questa Sorgente?",
+    "uninstallGame": "Disinstallare questo gioco?",
+    "unableToUninstallGameData": "Impossibile eliminare il pacchetto dati. È in uso? Prova a riavviare il launcher.",
+    "unableToDeleteGame": "Impossibile eliminare la partita. È in uso? Prova a riavviare il launcher.",
+    "downloadingGame": "Scaricamento Gioco...",
+    "verifyingGame": "Verifica Gioco...",
+    "aFewMinutes": "Questo può richiedere alcuni minuti."
   },
   "libraries": {
     "arcade": "Giochi",
     "arcadePlural": "Tutti i Giochi",
     "theatre": "Animazioni",
-    "theatrePlural": "Tutte le Animazioni"
+    "theatrePlural": "Tutte le Animazioni",
+    "auditorium": "NG Auditorium",
+    "auditoriumPlural": "Tutte Le Animazioni Ng"
   },
   "upgrades": {
     "infinity": "Flashpoint Infinity",
