--- a/lang/ru-RU.json
+++ b/lang/ru-RU.json
@@ -4,10 +4,10 @@
     "configHeader": "Настройки",
     "configDesc": "(Вы должны нажать 'Сохранить и перезапустить' для того, чтобы изменения вошли в силу)",
     "preferencesHeader": "Персонализация",
-    "extremeGames": "Жестокие игры",
-    "extremeGamesDesc": "Показывать игры с сексуальным, насильственным или другим неподходящим для детей содержанием.",
+    "extremeGames": "Взрослый контент",
+    "extremeGamesDesc": "Allow tags inside 'Extreme' tag filter groups and corresponding games to be shown.",
     "enableEditing": "Включить редактирование",
-    "enableEditingDesc": "Включить редактирование игр, дополнительные приложения и списки игр. Так же отображает вкладку 'Кураторам'.",
+    "enableEditingDesc": "Включите редактирование игр и дополнительных приложений. Также показывает вкладки, связанные с редактированием.",
     "onDemandImages": "Изображения по требованию",
     "onDemandImagesDesc": "Скачать и сохранить недостающие логотипы и скриншоты по мере необходимости.",
     "currentLanguage": "Язык",
@@ -20,15 +20,29 @@
     "flashpointPath": "Путь",
     "flashpointPathDesc": "Путь к папке, в которой находится Flashpoint (может быть относительным)",
     "browse": "Обзор",
+    "libraries": "Библиотеки",
+    "randomLibraries": "Случайные библиотеки",
+    "randomLibrariesDesc": "Библиотеки для случайных выбора на домашней странице.",
+    "updateSource": "Update Source",
     "platforms": "Платформы",
     "nativePlatforms": "Платформы Native",
     "nativePlatformsDesc": "Используйте Native версии этих платформ. (Если нет, он будет использовать Wine)",
+    "tagFilterGroups": "Tag Filter Groups",
+    "tagFilterGroupsDesc": "These groups will filter suggestions and games out of search results",
+    "editTagFilter": "Edit Tag Filter Group",
+    "duplicateTagFilter": "Duplicate Tag Filter Group",
+    "deleteTagFilter": "Delete Tag Filter Group",
+    "appPathOverrides": "Переопределение пути приложения",
+    "appPathOverridesDesc": "Переопределяет путь к приложению слева с правой стороны при запуске игр.",
     "visualsHeader": "Отображение",
     "useCustomTitleBar": "Использовать пользовательский заголовок",
     "useCustomTitleBarDesc": "Использовать пользовательский заголовок сверху этого окна.",
     "theme": "Тема",
     "noTheme": "Без темы",
-    "themeDesc": "Выбрать тему, которую хотите использовать (файл .css в папке с темой).",
+    "themeDesc": "ID темы для использования.",
+    "logoSet": "Набор логотипа",
+    "noLogoSet": "Нет набора логотипа",
+    "logoSetDesc": "ID используемого набора логотипа для использования.",
     "advancedHeader": "Дополнительно",
     "showDeveloperTab": "Показывать вкладку 'Разработка'",
     "showDeveloperTabDesc": "Показывает вкладку 'Разработчикам'. Она в большинстве полезна случаев только для разработчиков и кураторов.",
@@ -36,7 +50,15 @@
     "serverDesc": "Какой процесс сервера запускается при запуске лаунчера.",
     "metadataServerHost": "Хост сервера метаданных",
     "metadataServerHostDesc": "Хост сервера метаданных. Используется для синхронизации новой и обновлённой информации об игре в лаунчере.",
-    "saveAndRestart": "Сохранить и перезапустить"
+    "extensionsHeader": "Расширения",
+    "noExtensionsLoaded": "Расширения не загружены, установите их в '{0}'",
+    "extDevScripts": "Скрипт(ы) разработчика",
+    "extThemes": "Тема(ы)",
+    "extLogoSets": "Набор логотипа(ов)",
+    "extApplications": "Приложение(я)",
+    "saveAndRestart": "Сохранить и перезапустить",
+    "saveAndClose": "Save and Close",
+    "tagFilterGroupEditor": "Tag Filter Group Editor"
   },
   "home": {
     "updateHeader": "Обновление Лаунчера",
@@ -76,6 +98,7 @@
   },
   "logs": {
     "filters": "Фильтры",
+    "logLevels": "Уровни лога",
     "copyText": "Копировать текст",
     "clearLog": "Очистить лог",
     "copy404Urls": "Копировать 404 URL",
@@ -141,8 +164,22 @@
     "importLegacyPlatformsDesc": "Импортирует устаревшие платформы из `Data/Platforms/` - ВНИМАНИЕ: перезапишет конфликтующие игры",
     "importLegacyPlaylists": "Импортировать устаревшие плейлисты",
     "importLegacyPlaylistsDesc": "Импортирует устаревшие плейлисты из `/Data/Playlists`",
+    "deleteAllPlaylists": "Удалить все плейлисты",
+    "deleteAllPlaylistsDesc": "ОПАСНО! Удаляет все плейлисты.",
     "importMetaEdits": "Импортировать мета-правки",
     "importMetaEditsDesc": "Импортирует ВСЕ мета-правки из `/Data/MetaEdits`",
+    "fixPrimaryAliases": "Исправить основные псевдонимы",
+    "fixPrimaryAliasesDesc": "Добавить основной псевдоним в любые теги, которые не имеют его",
+    "fixCommaTags": "Исправить теги с запятыми",
+    "fixCommaTagsDesc": "Разделяет теги запятыми на много тегов и применяет их ко всем соответствующим играм",
+    "exportTags": "Экспорт тегов",
+    "exportTagsDesc": "Создаёт файл с тегами и категориями, которые могут быть использованы при импорте тегов",
+    "importTags": "Импорт тегов",
+    "importTagsDesc": "Импортировать теги из файла, созданного 'Экспорт тегов'",
+    "migrateExtremeGames": "Migrate Extreme Games",
+    "migrateExtremeGamesDesc": "Removes 'Extreme' from any games and assigns the 'LEGACY-Extreme' tag to them",
+    "massImportGameData": "Mass Import Game Data",
+    "massImportGameDataDesc": "Mass imports Game Data packs, attempting to match their filename to a games UUID.",
     "servicesHeader": "Фоновые сервисы",
     "servicesMissing": "Нет сервисов.",
     "running": "Работает",
@@ -173,6 +210,8 @@
   "browse": {
     "noTitle": "Без названия",
     "by": "разработано",
+    "play": "Играть",
+    "stop": "Остановить",
     "noDeveloper": "Без разработчика",
     "alternateTitles": "Альтерн. названия",
     "noAlternateTitles": "Без альтернативных названий",
@@ -219,6 +258,11 @@
     "searching": "Идёт поиск...",
     "library": "Библиотека",
     "defaultLibrary": "Библиотека по умолчанию",
+    "uninstallGame": "Uninstall Game",
+    "installed": "Installed",
+    "notInstalled": "Not Installed",
+    "legacyGame": "Legacy Game",
+    "download": "Download",
     "thumbnail": "Превью",
     "screenshot": "Скриншот",
     "dropImageHere": "Поместите изображение сюда, чтобы добавить его",
@@ -247,6 +291,7 @@
     "noGameMatchedSearch": "Попробуйте изменить запрос на менее конкретный."
   },
   "tags": {
+    "name": "Наименование",
     "noName": "Нет названия",
     "description": "Описание",
     "noDescription": "Нет описания",
@@ -274,6 +319,9 @@
     "deleteAll": "Удалить все",
     "deleteAllDesc": "Удалить все курации, которые в данный момент загружены",
     "saveImportedCurations": "Сохранить импортированные курации",
+    "keepArchiveKey": "Сохранить архив UUID",
+    "symlinkCurationContent": "Symlink Curation Content Folder (Требует подтверждение администратора в Windows, требуется для MAD4FP)",
+    "useTagFilters": "Use Tag Filters in Suggestions",
     "openCurationsFolder": "Папка Курации",
     "openCurationsFolderDesc": "Откройте папку Кураций в проводнике",
     "openExportsFolder": "Экспортируемые курации",
@@ -288,6 +336,8 @@
     "loadArchiveDesc": "Загрузить один или больше архивов",
     "loadFolder": "Загрузить папку",
     "loadFolderDesc": "Загрузить одну или больше папок",
+    "scanNewCurationFolders": "Scan For New Curations",
+    "scanNewCurationFoldersDesc": "Scans for curations that have been added after the initial scan",
     "noCurations": "Нет Курации",
     "id": "Папка курирования",
     "heading": "Название",
@@ -320,8 +370,14 @@
     "unusedPlatform": "'Платформа' имеет неиспользуемое значение. Убедитесь, что указали его правильно!",
     "nonExistingLibrary": "'Библиотека' не является именем существующей библиотеки! (Будет использована библиотека по умолчанию)",
     "nonContentFolders": "Папки без содержимого, найденные в папке Курации. Они должны быть там?",
+    "noTags": "There are no tags on this curation.",
+    "noSource": "'Source' is a required field.",
+    "unenteredTag": "The Tags text field hasn't been submitted.",
+    "noLogo": "There is no logo on this curation.",
+    "noScreenshot": "There is no screenshot on this curation.",
     "ilc_notHttp": "Использовать HTTP.",
-    "ilc_nonExistant": "Укажите на существующий файл в папке 'содержимое' вашего курирования."
+    "ilc_nonExistant": "Укажите на существующий файл в папке 'содержимое' вашего курирования.",
+    "sort": "Sort Curations (A-Z)"
   },
   "playlist": {
     "enterDescriptionHere": "Введите описание сюда...",
@@ -344,7 +400,7 @@
     "authorPlaceholder": "Автор...",
     "id": "ID",
     "by": "от",
-    "extreme": "жестокая"
+    "extreme": "крайний"
   },
   "misc": {
     "noBlankFound": "{0} не найден",
@@ -363,8 +419,10 @@
     "viewThumbnailInFolder": "Отображать превью в папке",
     "viewScreenshotInFolder": "Отображать скриншоты в папке",
     "openFileLocation": "Открыть расположение файлов",
+    "addToPlaylist": "Add to Playlist",
     "duplicateMetaOnly": "Дублировать (Только метафайлы)",
     "duplicateMetaAndImages": "Дублировать (Метафайлы и изображения)",
+    "copyGameUUID": "Скопировать UUID игры",
     "exportMetaOnly": "Экспортировать (Только метафайлы)",
     "exportMetaAndImages": "Экспортировать (Метафайлы и изображения)",
     "exportMetaEdit": "Экспорт мета-правок",
@@ -380,8 +438,8 @@
     "flashpointPathInvalid": "Неверный путь Flashpoint!",
     "pathNotFound": "Путь не найден!",
     "playlistConflict": "Конфликт плейлиста",
-    "importedPlaylistAlreadyExists": "Импортированный плейлист уже существует! - '{0}'",
-    "mergeOrStaySeperate": "Должны ли они объединиться в один, или остаться отдельными плейлистами?",
+    "importedPlaylistAlreadyExists": "Импортированный плейлист уже существует с таким именем! - '{0}'",
+    "importPlaylistAs": "Импортировать плейлист как",
     "selectFileToExportMeta": "Выберите файл для сохранения метаданных",
     "selectFolderToExportMetaAndImages": "Выберите папку для сохранения метафайлов и изображений",
     "replaceFilesQuestion": "Заменить файлы?",
@@ -401,19 +459,44 @@
     "restartNow": "Перезагрузить сейчас?",
     "restartToApplyUpgrade": "Это обновление не будет применено, пока вы не перезапустите.\nВы хотите сделать это сейчас?",
     "areYouSure": "Вы уверены?",
+    "areYouSureDelete": "Are you sure you want to delete this entry?",
+    "areYouSurePlaylistRemove": "Are you sure you want to remove this entry from the playlist?",
     "cancel": "Отмена",
     "mergePlaylists": "Объединить плейлисты",
-    "newPlaylist": "Оставить раздельно",
-    "uploadPrivacyWarning": "Это сделает ваш журнал общедоступным.\nСсылка будет скопирована в буфер обмена.\n\nВы уверены?",
+    "newPlaylist": "Stay Separate",
+    "uploadPrivacyWarning": "This will make your Logs available publicly.\nA link will be copied to your clipboard.\n\nAre you sure?",
     "overwriteFileTitle": "Файл уже существует!",
     "overwriteFileMessage": "Файл с таким именем уже существует. Вы хотите перезаписать его?",
-    "overwriteFileDetail": "Путь к файлу:"
+    "overwriteFileDetail": "Путь к файлу:",
+    "deleteTagFilterGroup": "Delete this Tag Filter Group?",
+    "deleteCuration": "Delete this Curation?",
+    "importCuration": "Import this Curation?",
+    "deleteGameImage": "Delete this Game Image?",
+    "deletePlaylist": "Delete this Playlist?",
+    "importAllCurations": "Import all Curations?",
+    "deleteAllCurations": "Delete all Curations?",
+    "removePlaylistGame": "Remove this Game from the Playlist?",
+    "deleteGame": "Delete this Game? This cannot be undone.",
+    "deleteGameData": "Delete this Game Data? This cannot be undone.",
+    "deleteAddApp": "Delete this Add App?",
+    "deleteTagCategory": "Delete this Tag Category?",
+    "deleteTag": "Delete this Tag?",
+    "deleteTagAlias": "Delete this Tag Alias?",
+    "deleteSource": "Delete this Source?",
+    "uninstallGame": "Uninstall this Game?",
+    "unableToUninstallGameData": "Unable to delete data pack. Is it in use? Try restarting the launcher.",
+    "unableToDeleteGame": "Unable to delete game. Is it in use? Try restarting the launcher.",
+    "downloadingGame": "Downloading Game...",
+    "verifyingGame": "Verifying Game...",
+    "aFewMinutes": "This may take a few minutes."
   },
   "libraries": {
     "arcade": "Игры",
     "arcadePlural": "Все игры",
     "theatre": "Анимации",
-    "theatrePlural": "Все анимации"
+    "theatrePlural": "Все анимации",
+    "auditorium": "NG Auditorium",
+    "auditoriumPlural": "Все NG анимации"
   },
   "upgrades": {
     "infinity": "Flashpoint Infinity",
