--- a/lang/tr-TR.json
+++ b/lang/tr-TR.json
@@ -4,10 +4,10 @@
     "configHeader": "Yapılandırma",
     "configDesc": "(Bazı değişikliklerin meydana gelmesi için 'Kaydet & Yeniden Başlat'a basmanız gerekir)",
     "preferencesHeader": "Tercihler",
-    "extremeGames": "Ekstrem Oyunlar",
-    "extremeGamesDesc": "Cinsellik, şiddet içeren ya da çocuklar için uygunsuz olan oyunları göster.",
+    "extremeGames": "Ekstrem İçerik",
+    "extremeGamesDesc": "'Ekstrem' etiket filtreleme grubu ve 'ekstrem' etiket filtreleme grubuna karşılık gelen oyunların gösterilmesine izin ver.",
     "enableEditing": "Değişikliklere İzin Ver",
-    "enableEditingDesc": "Oyunlarda, ekstra uygulamalara ve oynatma listelerinde değişikliklere izin ver. Ayrıca 'Yarat' panelini gösterir.",
+    "enableEditingDesc": "Oyunların ve fazladan eklentilerin düzenlenmesine izin verir. Ayrıca düzenlemeye bağlı seçenekleri gösterir.",
     "onDemandImages": "İsteğe Bağlı Görüntüler",
     "onDemandImagesDesc": "Gerektiğinde eksik logoları ve ekran görüntülerini indir ve kaydet.",
     "currentLanguage": "Dil",
@@ -20,15 +20,29 @@
     "flashpointPath": "Flashpoint Yolu",
     "flashpointPathDesc": "Flashpoint klasörüne yol (komşu olabilir)",
     "browse": "Ara",
+    "libraries": "Kütüphaneler",
+    "randomLibraries": "Rastgele Kütüphaneler",
+    "randomLibrariesDesc": "Ana sayfada Rastgele Seçimler için kullanılabilen kütüphaneler.",
+    "updateSource": "Kaynağı Güncelle",
     "platforms": "Platformlar",
     "nativePlatforms": "Yerli Platformlar",
     "nativePlatformsDesc": "Platformların Yerli sürümlerini kullan. (Uygun değilse Wine kullanır)",
+    "tagFilterGroups": "Etiket Filtreleme Grubu",
+    "tagFilterGroupsDesc": "Bu gruplar önerileri ve oyunları arama sonuçlarına göre filtreleyecek",
+    "editTagFilter": "Etiket Filtreleme Grubunu Düzenle",
+    "duplicateTagFilter": "Etiket Filtreleme Grubunu Kopyala",
+    "deleteTagFilter": "Etiket Filtreleme Grubunu Sil",
+    "appPathOverrides": "Uygulama Yolu Çiğnemeleri",
+    "appPathOverridesDesc": "Oyunları çalıştırırken soldaki uygulama yolunu sağdakiyle geçersiz kılar.",
     "visualsHeader": "Görseller",
     "useCustomTitleBar": "Özel bir Başlık kullan",
     "useCustomTitleBarDesc": "Bu pencerenin üzerinde özel bir başlık kullan.",
     "theme": "Tema",
     "noTheme": "Tema Yok",
-    "themeDesc": "Kullanılacak temanın dosya yolu (temalar klasörüne komşu).",
+    "themeDesc": "Kullanılacak temanın ID'si.",
+    "logoSet": "Logo Seti",
+    "noLogoSet": "Logo Seti Yok",
+    "logoSetDesc": "Kullanılacak logo setinin ID'si.",
     "advancedHeader": "Gelişmiş",
     "showDeveloperTab": "Geliştirici Panelini Göster",
     "showDeveloperTabDesc": "'Geliştirici' panelini göster. Bu daha çok geliştiriciler ve küratörler için kullanışlıdır.",
@@ -36,7 +50,15 @@
     "serverDesc": "Başlatıcı çalıştırıldığında hangi Sunucu İşleminin çalışacağını seçer.",
     "metadataServerHost": "Metadata Sunucu Merkezi",
     "metadataServerHostDesc": "Bir metadata sunucusunun merkezi. Yeni ve güncellenmiş oyun bilgisini başlatıcıyla senkronize etmek için kullanılır.",
-    "saveAndRestart": "Kaydet ve Yeniden Başlat"
+    "extensionsHeader": "Uzantılar",
+    "noExtensionsLoaded": "Yüklü uzantı yok, '{0}'a yükle",
+    "extDevScripts": "Geliştirici Kodları",
+    "extThemes": "Tema(lar)",
+    "extLogoSets": "Logo Setleri",
+    "extApplications": "Uygulamalar",
+    "saveAndRestart": "Kaydet ve Yeniden Başlat",
+    "saveAndClose": "Kaydet ve Kapat",
+    "tagFilterGroupEditor": "Etiket Filtreleme Grubu Düzenleyicisi"
   },
   "home": {
     "updateHeader": "Başlatıcı Güncellemesi",
@@ -76,6 +98,7 @@
   },
   "logs": {
     "filters": "Filtreler",
+    "logLevels": "Kayıt Seviyeleri",
     "copyText": "Metni Kopyala",
     "clearLog": "Kayıtları Temizle",
     "copy404Urls": "404 URL'lerini kopyala",
@@ -141,8 +164,22 @@
     "importLegacyPlatformsDesc": "'Data/Platforms/' dan Eski Platformları İçe Aktarır - UYARI: çakışan oyunların üstüne yazar",
     "importLegacyPlaylists": "Eski Oynama Listelerini İçe Aktar",
     "importLegacyPlaylistsDesc": "'/Data/Playlists/' den Eski Oynama Listelerini İçe Aktarır",
+    "deleteAllPlaylists": "Tüm Oynama Listelerini Sil",
+    "deleteAllPlaylistsDesc": "TEHLİKELİ! Tüm oyun listelerini siler.",
     "importMetaEdits": "Meta Düzenlemelerini İçe Aktar",
     "importMetaEditsDesc": "'/Data/MetaEdits' ten TÜM Meta Editlerini İçe Aktarır",
+    "fixPrimaryAliases": "Temel İsimleri Düzelt",
+    "fixPrimaryAliasesDesc": "Etiketi eksik olanlara temel bir isim ekler",
+    "fixCommaTags": "Virgüllü Etiketleri Düzelt",
+    "fixCommaTagsDesc": "Virgüllü etiketleri birden fazla etikete ayırır ve tüm uygun oyunlara uygular",
+    "exportTags": "Etiketleri Dışa Aktar",
+    "exportTagsDesc": "'Etiketleri İçe Aktar' için kullanılabilen tamamen etiketler ve etiket kategorileriyle dolu bir dosya yaratır",
+    "importTags": "Etiketleri İçe Aktar",
+    "importTagsDesc": "Etiketleri 'Etiketleri Dışa Aktar' dan yaratılan bir dosyadan içe aktarır",
+    "migrateExtremeGames": "Ekstrem Oyunları Göç Ettir",
+    "migrateExtremeGamesDesc": "Oyunlardan 'Ekstrem' etiketini kaldırır ve 'ESKİ-Ekstrem' etiketini atar",
+    "massImportGameData": "Oyun Verilerini Topluca İçeri Aktar",
+    "massImportGameDataDesc": "Oyun Verilerini toplu bir şekilde, dosya adlarını oyunun UUID'siyle eşleştirerek içeri aktarır.",
     "servicesHeader": "Arka Plan Hizmetleri",
     "servicesMissing": "Burada bir hizmet yok.",
     "running": "Çalışıyor",
@@ -173,6 +210,8 @@
   "browse": {
     "noTitle": "Başlık Yok",
     "by": "tarafından",
+    "play": "Oyna",
+    "stop": "Durdur",
     "noDeveloper": "Geliştirici Yok",
     "alternateTitles": "Alternatif Başlıklar",
     "noAlternateTitles": "Alternatif Başlık Yok",
@@ -219,6 +258,11 @@
     "searching": "Aranıyor...",
     "library": "Arşiv",
     "defaultLibrary": "Varsayılan Arşiv",
+    "uninstallGame": "Oyunu Kaldır",
+    "installed": "Yüklü",
+    "notInstalled": "Yüklü Değil",
+    "legacyGame": "Eski Oyun",
+    "download": "İndir",
     "thumbnail": "Küçükresim",
     "screenshot": "Ekran görüntüsü",
     "dropImageHere": "Eklemek için bir resmi buraya bırakın",
@@ -247,6 +291,7 @@
     "noGameMatchedSearch": "Daha az kısıtlayıcı bir şey aramayı deneyin."
   },
   "tags": {
+    "name": "Adı",
     "noName": "İsim Yok",
     "description": "Açıklama",
     "noDescription": "Açıklama Yok",
@@ -274,6 +319,9 @@
     "deleteAll": "Hepsini Sil",
     "deleteAllDesc": "Şu an yüklü olan tüm kürasyonları sil",
     "saveImportedCurations": "İçe Aktarılmış Kürasyonları Kaydet",
+    "keepArchiveKey": "Kürasyon Arşiv UUID'sini Sakla",
+    "symlinkCurationContent": "Symlink Kürasyon İçeriği Klasörü (Windows'ta yönetici istemleri, MAD4FP için gerekli)",
+    "useTagFilters": "Önerilerde Etiket Filtreleri Kullan",
     "openCurationsFolder": "Kürasyonlar Klasörü",
     "openCurationsFolderDesc": "Kürasyonlar klasörünü dosya gezgininde aç",
     "openExportsFolder": "Dışa Aktarılmış Kürasyonlar",
@@ -288,6 +336,8 @@
     "loadArchiveDesc": "Bir veya birden fazla Kürasyon arşivi yükle",
     "loadFolder": "Klasör Yükle",
     "loadFolderDesc": "Bir veya birden fazla Kürasyon klasörünü yükle",
+    "scanNewCurationFolders": "Yeni Kürasyonlar için Tara",
+    "scanNewCurationFoldersDesc": "İlk taramadan sonra eklenmiş kürasyonlar için tarar",
     "noCurations": "Kürasyon Yok",
     "id": "Kürasyon Klasörü",
     "heading": "Rota",
@@ -320,8 +370,14 @@
     "unusedPlatform": "'Platform' kullanılmayan bir değere sahip. Doğru yazıldığından emin olun!",
     "nonExistingLibrary": "'Library' var olan bir arşivin ismi değil! (Varsayılan kullanılacak)",
     "nonContentFolders": "Kürasyon klasörünün içinde İçerik olmayan klasörler bulundu. Orada mı olmaları gerekiyor?",
+    "noTags": "Bu kürasyonun etiketi yok.",
+    "noSource": "'Kaynak' gerekli bir alandır.",
+    "unenteredTag": "Etiketlerin metin alanı gönderilmedi.",
+    "noLogo": "Bu kürasyonun logosu yok.",
+    "noScreenshot": "Bu kürasyonun ekran görüntüsü yok.",
     "ilc_notHttp": "HTTP kullan.",
-    "ilc_nonExistant": "Kürasyon'unun içinde var olan bir 'içerik' dosyasına yönlendirin."
+    "ilc_nonExistant": "Kürasyon'unun içinde var olan bir 'içerik' dosyasına yönlendirin.",
+    "sort": "Kürasyonları Sınıflandır (A-Z)"
   },
   "playlist": {
     "enterDescriptionHere": "Buraya bir açıklama yazın...",
@@ -363,8 +419,10 @@
     "viewThumbnailInFolder": "Klasördeki küçükresmi İncele",
     "viewScreenshotInFolder": "Klasördeki Ekran Görüntüsünü İncele",
     "openFileLocation": "Dosya Konumunu Aç",
+    "addToPlaylist": "Oynama Listesine Ekle",
     "duplicateMetaOnly": "Kopyala (Sadece Meta)",
     "duplicateMetaAndImages": "Kopyala (Meta & Resimler)",
+    "copyGameUUID": "Oyun UUID'sini Kopyala",
     "exportMetaOnly": "Dışa Aktar (Sadece Meta)",
     "exportMetaAndImages": "Dışa Aktar (Meta & Resimler)",
     "exportMetaEdit": "Meta Düzenlemesini Dışa Aktar",
@@ -380,8 +438,8 @@
     "flashpointPathInvalid": "Flashpoint yolu geçersiz!",
     "pathNotFound": "Yol bulunamadı!",
     "playlistConflict": "Çakışan Oynama Listeleri",
-    "importedPlaylistAlreadyExists": "İçe Aktarılmış Oynama Listesi zaten mevcut! - '{0}",
-    "mergeOrStaySeperate": "Bir klasöre mi birleşsinler, yoksa ayrı oynama listeleri olarak mı kalsınlar?",
+    "importedPlaylistAlreadyExists": "İçe Aktarılmış oyun listesi zaten aynı bir isimle mevcut! - '{0}'",
+    "importPlaylistAs": "Oyun listesini olarak içe aktar",
     "selectFileToExportMeta": "Metayı kaydetmek için dosya seç",
     "selectFolderToExportMetaAndImages": "Meta ve resimleri kaydemek için klasör seç",
     "replaceFilesQuestion": "Dosyaları değiştir?",
@@ -401,19 +459,44 @@
     "restartNow": "Şimdi Yeniden Başlat?",
     "restartToApplyUpgrade": "Bu güncelleme yeniden başlatana kadar geçerli olmaz.\nŞimdi yapmak istiyor musun?",
     "areYouSure": "Emin misin?",
+    "areYouSureDelete": "Bu girişi silmek istediğinden emin misin?",
+    "areYouSurePlaylistRemove": "Bu girişi oynama listesinden çıkarmak istediğinizden emin misiniz?",
     "cancel": "İptal Et",
     "mergePlaylists": "Oynama Listelerini Birleştir",
     "newPlaylist": "Ayrı Tut",
-    "uploadPrivacyWarning": "Bu, Kayıtlarını herkese mevcut yapacak.\nBir link panoya kopyalanacak.\n\nEmin misin?",
+    "uploadPrivacyWarning": "Bu, Kayıtlarını herkese açık yapacak.\nPanoya bir link kopyalanacak.\n\nEmin misin?",
     "overwriteFileTitle": "Dosya zaten mevcut!",
     "overwriteFileMessage": "Aynı adı taşıyan bir dosya zaten var. Üzerine yazmak istiyor musunuz?",
-    "overwriteFileDetail": "Dosya yolu:"
+    "overwriteFileDetail": "Dosya yolu:",
+    "deleteTagFilterGroup": "Bu Etiket Filtreleme Grubunu Sil?",
+    "deleteCuration": "Bu Kürasyonu Sil?",
+    "importCuration": "Bu Kürasyonu İçe Aktar?",
+    "deleteGameImage": "Bu Oyun Resmi Silinsin mi?",
+    "deletePlaylist": "Oynama Listesini Sil?",
+    "importAllCurations": "Tüm Kürasyonları İçe Aktar?",
+    "deleteAllCurations": "Tüm Kürasyonları Sil?",
+    "removePlaylistGame": "Bu Oyunu Oyna Listesinden Kaldır?",
+    "deleteGame": "Bu Oyun silinsin mi? Bu işlem geri alınamaz.",
+    "deleteGameData": "Bu Oyun Verisi silinsin mi? Bu işlem geri alınamaz.",
+    "deleteAddApp": "Bu eklenmiş uygulamayı sil?",
+    "deleteTagCategory": "Bu Etiket Kategorisi silinsin mi?",
+    "deleteTag": "Bu etiketi sil?",
+    "deleteTagAlias": "Bu isim etiketini sil?",
+    "deleteSource": "Bu Kaynağı Sil?",
+    "uninstallGame": "Bu Oyunu Sil?",
+    "unableToUninstallGameData": "Veri paketi silinemedi. Kullanımda mı? Başlatıcıyı yeniden başlatmayı deneyin.",
+    "unableToDeleteGame": "Oyun silinemedi. Kullanımda mı? Başlatıcıyı yeniden başlatmayı deneyin.",
+    "downloadingGame": "Oyun İndiriliyor...",
+    "verifyingGame": "Oyun Doğrulanıyor...",
+    "aFewMinutes": "Bu işlem birkaç dakika sürebilir."
   },
   "libraries": {
     "arcade": "Oyunlar",
     "arcadePlural": "Tüm Oyunlar",
     "theatre": "Animasyonlar",
-    "theatrePlural": "Tüm Animasyonlar"
+    "theatrePlural": "Tüm Animasyonlar",
+    "auditorium": "NG Auditorium",
+    "auditoriumPlural": "Tüm NG Animasyonları"
   },
   "upgrades": {
     "infinity": "Flashpoint Infinity",
